Update images and some features descriptions, and whats new for public release build 1057

--- a/Credits.html
+++ b/Credits.html
@@ -201,21 +201,27 @@ a:link { color: #0076C5}</style>
 <li class="rvps6"><span class="rvts6">Kostek (przyciski do audio).</span></li>
 <li class="rvps6"><span class="rvts6">Xandros (nowe przyciski do wideo).</span></li>
 <li class="rvps6"><span class="rvts6">Devilkan (ikony menu i paska narzędzi, obrazki do pomocy).</span></li>
+<li class="rvps6"><span class="rvts6">Senami (obrazki do pomocy).</span></li>
 <li class="rvps6"><span class="rvts6">Areki, duplex (tłumaczenie anglojęzyczne).</span></li>
 </ul>
 <p class="rvps6"><span class="rvts6"><br/></span></p>
 <p class="rvps6"><span class="rvts19">Testerzy:</span><span class="rvts6"> (mniej i bardziej wprawieni użytkownicy programu)</span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside;">
-<li class="rvps6"><span class="rvts6">Funki27 (pierwszy tester mający spory wpływ obecne działanie programu i najbardziej narzekający na wszystko).</span></li>
-<li class="rvps6"><span class="rvts6">Sacredus (chyba pierwszy tłumacz używający trybu tłumaczenia, nieoceniona pomoc przy testowaniu wydajności na słabym komputerze).</span></li>
-<li class="rvps6"><span class="rvts6">Kostek00 (prawdziwy wynajdywacz błędów, miał duży wpływ na rozwój wykresu audio i głównego pola tekstowego).</span></li>
-<li class="rvps6"><span class="rvts6">Devilkan (crashhunter, ze względu na swój system i przyzwyczajenia wytropił już wiele crashy).</span></li>
+<li class="rvps6"><span class="rvts6">Funki27 (pierwszy tester mający spory wpływ na obecne działanie programui najbardziej narzekający na wszystko).</span></li>
+<li class="rvps6"><span class="rvts6">Sacredus (chyba pierwszy tłumacz używający trybu tłumaczenia,\n nieoceniona pomoc przy testowaniu wydajności na słabym komputerze).</span></li>
+<li class="rvps6"><span class="rvts6">Kostek00 (prawdziwy wynajdywacz błędów, miał duży wpływ na rozwój spektrum audio i głównego pola tekstowego, stworzył ciemny i jasny motyw, a także część ikon).</span></li>
+<li class="rvps6"><span class="rvts6">Devilkan (crashhunter, ze względu na swój system i przyzwyczajenia wytropił już wiele crashy, pomógł w poprawie działania narzędzi do typesettingu, wymyślił wiele innych usprawnień).</span></li>
+<li class="rvps6"><span class="rvts6">MatiasMovie (wyłapał parę crashy i zaproponował różne usprawnienia, pomaga w debugowaniu crashy).</span></li>
+<li class="rvps6"><span class="rvts6">mas1904 (wyłapał trochę błędów, pomaga w debugowaniu crashy, zrobił drzewko AVL).</span></li>
+<li class="rvps6"><span class="rvts6">bigdo (wyłapał trochę błędów, pomagał w debugowaniu crashy).</span></li>
+<li class="rvps6"><span class="rvts6">Senami (stworzył nowe motywy a także wyłapał parę błędów).</span></li>
+<li class="rvps6"><span class="rvts6">Wincenty271 (wyłapał trochę błędów, a także pomaga w debugowaniu craszy).</span></li>
 </ul>
 <p class="rvps6"><span class="rvts6"><br/></span></p>
 <p class="rvps6"><span class="rvts19">Podziękowania</span><span class="rvts6"> dla osób które używają programu i od czasu do czasu coś wynajdowali.</span></p>
-<p class="rvps6"><span class="rvts6">Ksenoform, Deadsoul, Zły los, Vessin, Xandros, Areki, Nyah2211, Waski_jestem.</span></p>
+<p class="rvps6"><span class="rvts6">BadRequest, Ognisty321, Nyah2211, dark, Ksenoform, Zły Los, Vessin, Xandros.</span></p>
 <p></p>
-<p class="rvps5" style="clear: both;"><span class="rvts12">Created with the Personal Edition of HelpNDoc: </span><a class="rvts13" href="https://www.helpndoc.com/create-epub-ebooks">Write EPub books for the iPad</a></p>
+
 
             </div>
             
