--- a/Kolekcjonerczcionek.html
+++ b/Kolekcjonerczcionek.html
@@ -13,7 +13,7 @@
 
   <title>Kolekcjoner czcionek</title>
   <meta name="description" content="" /> 
-  <meta name="keywords" content="">
+  <meta name="keywords" content="wł">
 
 
 
@@ -190,7 +190,7 @@ a:link { color: #0076C5}</style>
 <p></p>
 <h1 class="rvps4"><span class="rvts0"><span class="rvts15">Kolekcjoner czcionek</span></span></h1>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
-<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem30.png"></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/kolekcjoner-czcionek1.png"></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
 <li value="1" class="rvps6"><span class="rvts6">Ścieżka do folderu bądź pliku zip, gdzie zapisane zostaną czcionki.</span></li>
@@ -198,17 +198,20 @@ a:link { color: #0076C5}</style>
 <li value="3" class="rvps6"><span class="rvts6">Sprawdza tylko czy czcionki są dostępne.</span></li>
 <li value="4" class="rvps6"><span class="rvts6">Kopiuje czcionki do wybranego folderu.</span></li>
 <li value="5" class="rvps6"><span class="rvts6">Kopiuje czcionki i pakuje zipem.</span></li>
-<li value="6" class="rvps6"><span class="rvts6">Wmuxowuje czcionki do wczytanego pliku MKV (wymagany MKVToolnix).</span></li>
-<li value="7" class="rvps6"><span class="rvts6">W przypadku wybrania tej opcji tworzy podfolder czcionki w folderze napisami i zapisuje do niego niezależnie od ścieżki wybranej w polu (1).</span></li>
-<li value="8" class="rvps6"><span class="rvts6">Wymuxowuje czcionki z wczytanego pliku MKV.</span></li>
-<li value="9" class="rvps6"><span class="rvts6">Okno logów gdzie pisze o dostępności czcionek i wykonywanej pracy.</span></li>
-<li value="10" class="rvps6"><span class="rvts6">Rozpoczyna sprawdzanie dostępności lub zapis czcionek.</span></li>
-<li value="11" class="rvps6"><span class="rvts6">Zamyka okno.</span></li>
+<li value="6" class="rvps6"><span class="rvts6">W przypadku wybrania tej opcji tworzy podfolder czcionki w folderze napisami i zapisuje do niego niezależnie od ścieżki wybranej w polu (1).</span></li>
+<li value="7" class="rvps6"><span class="rvts6">Wymuxowuje czcionek z wczytanego pliku MKV.</span></li>
+<li value="8" class="rvps6"><span class="rvts6">Okno logów gdzie pisze o dostępności czcionek i wykonywanej pracy. Dwukrotne kliknięcie na styl, numer zakładki i numer linii otwiera menedżera stylów bądź przechodzi na właściwą linię.</span></li>
+<li value="9" class="rvps6"><span class="rvts6">Rozpoczyna sprawdzanie dostępności lub zapis czcionek.</span></li>
+<li value="10" class="rvps6"><span class="rvts6">Rozpoczyna sprawdzanie dostępności lub zapis czcionek na wszystkich otwartych zakładkach.</span></li>
+<li value="11" class="rvps6"><span class="rvts6">Po zapisie czcionek na dysk otwiera folder zapisu, póki nie zostanie dokonany zapis czcionek na dysk, przycisk ten jest nieaktywny.</span></li>
+<li value="12" class="rvps6"><span class="rvts6">Zamyka okno.</span></li>
 </ol>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6">Przy sprawdzaniu bądź zapisie czcionek sprawdza także czy wszystkie znaki użyte w tekście znajdują się w danej czcionce.</span></p>
+<p class="rvps2"><span class="rvts6">Obecnie okno kolekcjonera blokuje dostęp tylko w momencie pracy kolekcjonera, dając pewność że wszystkie zmiany zostały ujęte.</span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
 <p></p>
-<p class="rvps5" style="clear: both;"><span class="rvts12">Created with the Personal Edition of HelpNDoc: </span><a class="rvts13" href="https://www.helpndoc.com/feature-tour/iphone-website-generation">iPhone web sites made easy</a></p>
+
 
             </div>
             
