--- a/Konwersja.html
+++ b/Konwersja.html
@@ -192,15 +192,15 @@ a:link { color: #0076C5}</style>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
 <p class="rvps6"><span class="rvts6">Kainote konwertuje na formaty: ASS, SRT, MDVD, MPL2 i TMP. </span></p>
 <p class="rvps6"><span class="rvts6">Wszystkie można wybrać z menu Napisy -&gt; Konwersja.</span></p>
-<p class="rvps2"><span class="rvts26"><br/></span></p>
-<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem1.png"></p>
+<p class="rvps2"><span class="rvts27"><br/></span></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/konwersja.png"></p>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
 <p class="rvps6"><span class="rvts6">Przy konwersji z ASS większość tagów zostaje porzuconych, konwertują się głównie kursywa i pogrubienie, a także podkreślenie i przekreślenie w przypadku SRT. </span></p>
 <p class="rvps6"><span class="rvts6">Czcionka i kolor pierwszy zostaje porzucony zarówno przy konwersji na MDVD jak i z niego.</span></p>
 <p class="rvps6"><span class="rvts6">Aby zapisać napisy w jakimś formacie należy je do niego przekonwertować, a później zapisać i właściwe rozszerzenie jest ustawiane przy zapisie.</span></p>
 <p class="rvps6"><span class="rvts6"><br/></span></p>
 <p></p>
-<p class="rvps5" style="clear: both;"><span class="rvts12">Created with the Personal Edition of HelpNDoc: </span><a class="rvts13" href="https://www.helpndoc.com/create-epub-ebooks">Full-featured EPub generator</a></p>
+
 
             </div>
             
