--- a/NajczesciejzadawanepytaniaFAQ.html
+++ b/NajczesciejzadawanepytaniaFAQ.html
@@ -191,23 +191,23 @@ a:link { color: #0076C5}</style>
 <h1 class="rvps4"><span class="rvts0"><span class="rvts15">Najczęściej zadawane pytania</span></span></h1>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside;">
-<li style="list-style-image: url('lib/12.bmp')" class="rvps6"><span class="rvts17">Dlaczego przy próbie otwarcia programu pisze, że brakuje pliku dll?</span></li>
+<li style="list-style-image: url('lib/16.bmp')" class="rvps6"><span class="rvts17">Dlaczego przy próbie otwarcia programu jest napisane, że brakuje pliku dll?</span></li>
 </ul>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside;">
-<li class="rvps6"><span class="rvts6">W przypadku Windowsa 7 w Direct X brakuje części plików, wystarczy użyć </span><a class="rvts18" href="https://www.microsoft.com/en-us/download/details.aspx?id=35&44F86079-8679-400C-BFF2-9CA5F2BCBDFC=1">instalatora sieciowego.</a></li>
-<li class="rvps6"><span class="rvts6">Jeśli to nie rozwiązuje problemu, to można spróbować na nowo skopiować wszystkie pliki Kainote.</span></li>
-<li class="rvps6"><span class="rvts6">Gdy wszystko inne zawiedzie można napisać w temacie Kainote na forum Ansi, bądź na PW, bądź GG.</span></li>
-</ul>
-<p class="rvps2"><span class="rvts6"><br/></span></p>
-<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside;">
-<li style="list-style-image: url('lib/12.bmp')" class="rvps6"><span class="rvts17">Dlaczego po otworzeniu Kainote dostaję informację, że nie udało się wczytać hotkeysów i program zostanie zamknięty?</span></li>
-</ul>
-<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside;">
-<li class="rvps6"><span class="rvts6">Przyczyny mogą być dwie, od poprzedniej wersji zmieniły się użyte hotkeysy i wystarczy tylko usunąć plik Hotkeys.txt i AudioHotkeys.txt. Bądź też mamy ustawiony język japoński, po wyłączeniu wszystko powinno działać.</span></li>
+<li class="rvps6"><span class="rvts6">W przypadku Windowsa7 w DirectX brakuje części plików, wystarczy użyć </span><a class="rvts18" href="https://www.microsoft.com/en-us/download/details.aspx?id=35&44F86079-8679-400C-BFF2-9CA5F2BCBDFC=1">instalatora sieciowego.</a></li>
+<li class="rvps6"><span class="rvts6">Jeśli to nie rozwiązuje problemu, należy spróbować na nowo skopiować wszystkie pliki Kainote.</span></li>
+<li class="rvps6"><span class="rvts6">Gdy wszystko inne zawiedzie warto napisać w temacie </span><a class="rvts18" href="http://animesub.info/forum/viewtopic.php?id=258715" target="_blank">Kainote na forum ANSI</a><span class="rvts6">, bądź na PW, </span><a class="rvts18" href="https://github.com/bjakja/Kainote/issues">Githubie</a><span class="rvts6">, GG czy Discordzie.</span></li>
 </ul>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside;">
-<li style="list-style-image: url('lib/12.bmp')" class="rvps6"><span class="rvts17">Dlaczego po otworzeniu wideo mam zieloną / różową plamę?</span></li>
+<li style="list-style-image: url('lib/16.bmp')" class="rvps6"><span class="rvts17">Dlaczego po otwarciu Kainote dostaję informację, że nie udało się wczytać skrótów klawiszowych i program zostanie zamknięty?</span></li>
+</ul>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside;">
+<li class="rvps6"><span class="rvts6">Przyczyny mogą być dwie, od poprzedniej wersji zmieniły się użyte skróty klawiszowe i wystarczy tylko usunąć plik Hotkeys.txt i AudioHotkeys.txt.</span></li>
+</ul>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside;">
+<li style="list-style-image: url('lib/16.bmp')" class="rvps6"><span class="rvts17">Dlaczego po otwarciu wideo mam zieloną / różową plamę?</span></li>
 </ul>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside;">
 <li class="rvps6"><span class="rvts6">Przyczyną są kodeki Microsoftu, wystarczy je zmienić, instalując inne, najlepiej K-lite bądź gdy już jakieś mamy zainstalować </span><a class="rvts18" href="http://www.programosy.pl/program,preferred-filter-tweaker.html" target="_blank">Win7DSFilterTweaker</a><span class="rvts6"> i wybrać dla h264 inny codec niż Microsoftu.</span></li>
@@ -215,25 +215,26 @@ a:link { color: #0076C5}</style>
 </ul>
 <p class="rvps6"><span class="rvts6"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside;">
-<li style="list-style-image: url('lib/12.bmp')" class="rvps6"><span class="rvts17">Jak zmienić wielkość wideo?</span></li>
+<li style="list-style-image: url('lib/16.bmp')" class="rvps6"><span class="rvts17">Jak zmienić wielkość wideo?</span></li>
 </ul>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside;">
 <li class="rvps6"><span class="rvts6">Wystarczy najechać myszą między okno wideo a pole napisów i przeciągnąć, bądź kliknąć w wideo i użyć rolki myszy.</span></li>
 </ul>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside;">
-<li style="list-style-image: url('lib/12.bmp')" class="rvps6"><span class="rvts17">Dlaczego w programie nie ma tego czy tamtego?</span><span class="rvts6"> </span></li>
+<li style="list-style-image: url('lib/16.bmp')" class="rvps6"><span class="rvts17">Dlaczego w programie nie ma tego czy tamtego?</span><span class="rvts6"> </span></li>
 </ul>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside;">
-<li class="rvps6"><span class="rvts6">Jeszcze nikt nie zgłosił mi, że coś takiego chce, możesz być pierwszy.</span></li>
+<li class="rvps6"><span class="rvts6">Jeszcze nikt nie zgłosił mi, sugestii dotyczącej danej funkcji, możesz być pierwszy.</span></li>
 <li class="rvps6"><span class="rvts6">Zabrakło mi chęci by to zrobić bądź uznałem to za mało istotne, większa ilość zgłoszeń, większe szanse że to trafi do Kainote.</span></li>
 <li class="rvps6"><span class="rvts6">Jeszcze nie mam wystarczającej wiedzy programistycznej by napisać dany element, co nie znaczy wcale, że z niego zrezygnowałem.</span></li>
 </ul>
+<p class="rvps6"><span class="rvts6">Sugestie dotyczące nowych funkcji można zgłaszać w temacie </span><a class="rvts18" href="http://animesub.info/forum/viewtopic.php?id=258715" target="_blank">Kainote na forum ANSI</a><span class="rvts6">, bądź na PW, </span><a class="rvts18" href="https://github.com/bjakja/Kainote/issues">Githubie</a><span class="rvts6">, GG czy Discordzie.</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p></p>
-<p class="rvps5" style="clear: both;"><span class="rvts12">Created with the Personal Edition of HelpNDoc: </span><a class="rvts13" href="https://www.helpndoc.com/feature-tour/iphone-website-generation">iPhone web sites made easy</a></p>
+
 
             </div>
             
