--- a/Napisy.html
+++ b/Napisy.html
@@ -190,20 +190,19 @@ a:link { color: #0076C5}</style>
 <p></p>
 <h1 class="rvps4"><span class="rvts0"><span class="rvts11">Napisy</span></span></h1>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts20">Otwieranie napisów</span><br/><span class="rvts6"><br/></span></p>
-<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem99.png"></p>
+<p class="rvps2"><span class="rvts20">Otwieranie napisów</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps6"><span class="rvts6">W menu </span><span class="rvts17">Plik</span><span class="rvts6"> mamy 2 opcje otwierania napisów:</span></p>
+<p class="rvps6"><span class="rvts6">W menu </span><span class="rvts17">Plik</span><span class="rvts6"> dostępne są 2 opcje otwierania napisów:</span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
-<li class="rvps6"><span class="rvts17">Otwórz napisy</span><span class="rvts6"> - otwiera napisy z wybranej lokacji bądź wymuxowuje je z pliku MKV.</span></li>
+<li class="rvps6"><span class="rvts17">Otwórz napisy</span><span class="rvts6"> - otwiera napisy z wybranej lokacji, bądź wciąga je z pliku MKV.</span></li>
 <li class="rvps6"><span class="rvts17">Ostatnio otwarte napisy </span><span class="rvts6">- otwiera poprzednio otwierane napisy.</span></li>
 </ul>
-<p class="rvps6"><span class="rvts6">Gdy chcemy stworzyć nowe napisy wystarczy użyć tych zaraz po otwarciu programu, bądź otworzyć nową zakładkę, stąd też nie ma opcji "Nowe napisy".</span></p>
+<p class="rvps6"><span class="rvts6">Aby stworzyć nowe napisy wystarczy użyć tych zaraz po otwarciu programu, bądź otworzyć nową zakładkę. Dlatego też program nie posiada opcji "Nowe napisy".</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts20">Obsługiwane formaty</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps6"><span class="rvts6">Kainote obsługuje następujące formaty:</span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
-<li class="rvps6"><span class="rvts6">Kainote obsługuje następujące formaty:</span></li>
 <li class="rvps6"><span class="rvts6">Advanced Substation Alpha (ASS)</span></li>
 <li class="rvps6"><span class="rvts6">Substation Alpha (SSA) (automatyczna konwersja do ASS)</span></li>
 <li class="rvps6"><span class="rvts6">Subrip (SRT)</span></li>
@@ -212,7 +211,7 @@ a:link { color: #0076C5}</style>
 <li class="rvps6"><span class="rvts6">TMP (TXT)</span></li>
 </ul>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts20">Formaty wymuxowywane z MKV</span></p>
+<p class="rvps2"><span class="rvts20">Formaty wyciągane z MKV</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
 <li class="rvps6"><span class="rvts6">S_TEXT/UTF8 (SRT)</span></li>
@@ -223,31 +222,24 @@ a:link { color: #0076C5}</style>
 <p class="rvps2"><span class="rvts22"><br/></span></p>
 <p class="rvps2"><span class="rvts20">Zwykły tekst</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts6">Dzielony jest on na łamaniach i wszystkie czasy ustawione są na 0:00:00.00.</span></p>
+<p class="rvps2"><span class="rvts6">Dzielony jest na łamaniach, a czasy ustawione są na 0:00:00.00, więc należy je samemu sustawić.</span></p>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
 <p class="rvps2"><span class="rvts20">Menu Napisy składa się z następujących elementów:</span></p>
 <p class="rvps2"><span class="rvts17"><br/></span></p>
-<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem100.png"></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/Menu napisy.png"></p>
 <p class="rvps2"><span class="rvts20"><br/></span></p>
 <p class="rvps6"><span class="rvts17">Włącz / Wyłącz edytor</span><span class="rvts6"> - włącza / wyłącza edytor, przy wyłączonym edytorze napisy wczytywane są przez Vsfilter jak w większości odtwarzaczy wideo.</span></p>
 <p class="rvps6"><a class="rvts21" href="WlasciwosciASS.html">Właściwości ASS / SSA</a><span class="rvts6"> - włącza okno właściwości ASS. </span></p>
 <p class="rvps6"><a class="rvts21" href="Edycjastylow.html">Menedżer stylów</a><span class="rvts6"> - włącza okno menedżera stylów.</span></p>
 <p class="rvps6"><a class="rvts21" href="Konwersja.html">Konwersja</a><span class="rvts6"> - pozwala zmienić format napisów.</span></p>
-<p class="rvps6"><a class="rvts21" href="Przesuwanieczasownapisow.html">Okno zmiany czasów</a><span class="rvts17"> </span><span class="rvts6">- pokazuje / ukrywa okno zmiany czasów obok pola napisów.</span></p>
-<p class="rvps6"><a class="rvts21" href="Narzedziaedycjiwizualnej.html#cross%20tool">Włącz wskaźnik pozycji</a><span class="rvts6"> - włącza wskaźnik pozycji gdy jest użyte inne narzędzie do edycji wizualnej.</span></p>
-<p class="rvps6"><a class="rvts21" href="Narzedziaedycjiwizualnej.html#pos%20tool">Włącz przesuwanie</a><span class="rvts6"> - pozwala ustawiać pozycję linii na wideo.</span></p>
-<p class="rvps6"><a class="rvts21" href="Narzedziaedycjiwizualnej.html#move%20tool">Włącz ruch</a><span class="rvts6"> - pozwala tworzyć animację ruchu przy użyciu tagu move.</span></p>
-<p class="rvps6"><a class="rvts21" href="Narzedziaedycjiwizualnej.html#scaling%20tool">Włącz skalowanie</a><span class="rvts6"> - załącza narzędzie do skalowania.</span></p>
-<p class="rvps6"><a class="rvts21" href="Narzedziaedycjiwizualnej.html#RotZ%20tool">Włącz obracanie w osi Z</a><span class="rvts6"> - &nbsp;załącza narzędzie do obracania wokół osi Z. </span></p>
-<p class="rvps6"><a class="rvts21" href="Narzedziaedycjiwizualnej.html#RotXY%20tool">Włącz obracanie w osi X / Y</a><span class="rvts6"> - &nbsp;załącza narzędzie do obracania wokół osi X i Y. </span></p>
-<p class="rvps6"><a class="rvts21" href="Narzedziaedycjiwizualnej.html#cliprect%20tool">Włącz wycinki prostokątne</a><span class="rvts6"> - pozwala na tworzenie wycinków prostokątnych tekstu na wideo. </span></p>
-<p class="rvps6"><a class="rvts21" href="Narzedziaedycjiwizualnej.html#vector%20tool">Włącz wycinki wektorowe</a><span class="rvts6"> - pozwala na tworzenie wycinków wektorowych tekstu na wideo.</span></p>
-<p class="rvps6"><a class="rvts21" href="Narzedziaedycjiwizualnej.html#vector%20tool">Włącz rysunki wektorowe</a><span class="rvts6"> - pozwala na tworzenie rysunków ASS na wideo.</span></p>
+<p class="rvps6"><a class="rvts21" href="Przesuwanieczasownapisowipostpro.html">Okno zmiany czasów</a><span class="rvts17"> </span><span class="rvts6">- pokazuje / ukrywa okno zmiany czasów obok pola napisów.</span></p>
+<p class="rvps6"><span class="rvts6">Zmień rozdzielczość napisów - pozwala na zmianę rozdzielczości napisów w formacie ASS wraz z konwersją pozycji i innych tagów.</span></p>
+<p class="rvps6"><a class="rvts18" href="Sprawdzaniepisowni.html#Okno_sprawdzania_pisowni">Sprawdź poprawność pisowni</a><span class="rvts6"> - włącza okno sprawdzania pisowni.</span></p>
 <p class="rvps6"><a class="rvts21" href="Kolekcjonerczcionek.html">Kolekcjoner czcionek</a><span class="rvts6"> - pozwala na sprawdzenie dostępności czcionek i skopiowanie ich.</span></p>
 <p class="rvps6"><span class="rvts17">Ukryj tagi w nawiasach</span><span class="rvts6"> - ukrywa / pokazuje tagi w polu napisów, zmieniając je na tekst ustawiony w opcjach -&gt; Edytor -&gt; Znak podmiany tagów ASS.</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p></p>
-<p class="rvps5" style="clear: both;"><span class="rvts12">Created with the Personal Edition of HelpNDoc: </span><a class="rvts13" href="https://www.helpndoc.com">Free Web Help generator</a></p>
+
 
             </div>
             
