--- a/Narzedziaedycjiwizualnej.html
+++ b/Narzedziaedycjiwizualnej.html
@@ -176,7 +176,7 @@ a:link { color: #0076C5}</style>
                         <li><a href="Typesetting.html">Typesetting</a></li>
                     </ol>
                     <div class="nav-arrows">
-                        <div class="btn-group btn-group-xs" role="group"><a class="btn btn-default" href="Typesetting.html" title="Typesetting" role="button"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></a><a class="btn btn-default" href="Oknowyborukoloru.html" title="Okno wyboru koloru" role="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a><a class="btn btn-default" href="WlasciwosciASS.html" title="Właściwości ASS" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
+                        <div class="btn-group btn-group-xs" role="group"><a class="btn btn-default" href="Typesetting.html" title="Typesetting" role="button"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></a><a class="btn btn-default" href="Probnikkoloru.html" title="Pr&oacute;bnik koloru" role="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a><a class="btn btn-default" href="WlasciwosciASS.html" title="Właściwości ASS" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
                     </div>
                 </div> 
             
@@ -211,7 +211,7 @@ a:link { color: #0076C5}</style>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><a name="move tool"></a>
 <span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts20">Ruch</span><span class="rvts34"> </span><img alt="" style="padding : 1px;" src="lib/NewItem77.png"></p>
+<p class="rvps2"><span class="rvts20">Ruch</span><span class="rvts35"> </span><img alt="" style="padding : 1px;" src="lib/NewItem77.png"></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem76.png"></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
@@ -223,14 +223,14 @@ a:link { color: #0076C5}</style>
 <p class="rvps2"><span class="rvts6">Zarówno pozycjonowanie, jak i ruch odnoszą się całej linijki, więc ustawienie kursora nie ma znaczenia.</span></p>
 <p class="rvps2"><a name="scaling tool"></a>
 <span class="rvts22"><br/></span></p>
-<p class="rvps2"><span class="rvts20">Skalowanie</span><span class="rvts34"> </span><img alt="" style="padding : 1px;" src="lib/NewItem80.png"></p>
+<p class="rvps2"><span class="rvts20">Skalowanie</span><span class="rvts35"> </span><img alt="" style="padding : 1px;" src="lib/NewItem80.png"></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem79.png"></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6">Po włączeniu przyciskiem </span><img alt="" style="padding : 1px;" src="lib/NewItem81.png"><span class="rvts6"> pojawiają się trzy strzałki zaczynające się w pozycji edytowanej linijki. Edytować można przeciągając pionową dla skali Y, poziomą dla skali X i skośną dla obu skali. Można też kliknąć i przeciągać w dowolnym miejscu ekranu, lewy przycisk myszy przesuwa skalę X, prawy skalę Y, a środkowy obie skale. Skalowanie ustawia tagi w miejscu wskazania kursora, po przesunięciu kursora można edytować skalę dla następujących po nim liter aż do końca linijki bądź innego tagu skali.</span></p>
 <p class="rvps2"><a name="RotZ tool"></a>
 <span class="rvts22"><br/></span></p>
-<p class="rvps2"><span class="rvts20">Obracanie wokół osi Z</span><span class="rvts34"> </span><img alt="" style="padding : 1px;" src="lib/NewItem83.png"></p>
+<p class="rvps2"><span class="rvts20">Obracanie wokół osi Z</span><span class="rvts35"> </span><img alt="" style="padding : 1px;" src="lib/NewItem83.png"></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem85.png"></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
@@ -244,7 +244,7 @@ a:link { color: #0076C5}</style>
 <p class="rvps2"><span class="rvts6">Po włączeniu przyciskiem </span><img alt="" style="padding : 1px;" src="lib/NewItem88.png"><span class="rvts6"> pojawia się siatka wg której będziemy obracać tekst. Domyślnie zakotwiczone w miejscu pozycji linii, chyba że jest już dopisany punkt org, to wtedy jest ustawione w jego punkcie. Przytrzymując lewy przycisk obracamy wokół osi Y. Przytrzymując prawy przycisk myszy obracamy wokół osi X, a przytrzymując środkowy obracamy wokół obu osi. Obracanie wokół osi X i Y wstawia tagi w miejscu kursora.</span></p>
 <p class="rvps2"><a name="cliprect tool"></a>
 <span class="rvts22"><br/></span></p>
-<p class="rvps2"><span class="rvts20">Wycinki prostokątne</span><span class="rvts34"> </span><img alt="" style="padding : 1px;" src="lib/NewItem90.png"></p>
+<p class="rvps2"><span class="rvts20">Wycinki prostokątne</span><span class="rvts35"> </span><img alt="" style="padding : 1px;" src="lib/NewItem90.png"></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem89.png"></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
@@ -331,7 +331,7 @@ a:link { color: #0076C5}</style>
 <p class="rvps2"><span class="rvts6">Oczywiście jeśli ktoś ma jakieś propozycje odnośnie lepiej widocznych kursorów czy innych przydatnych zmian odnośnie tego narzędzia albo innych to może o tym napisać na forum albo w wiadomości prywatnej bądź w issues githuba.</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p></p>
-<p class="rvps5" style="clear: both;"><span class="rvts12">Created with the Personal Edition of HelpNDoc: </span><a class="rvts13" href="https://www.helpndoc.com/create-epub-ebooks">Generate EPub eBooks with ease</a></p>
+
 
             </div>
             
