--- a/Oknowyborukoloru.html
+++ b/Oknowyborukoloru.html
@@ -176,7 +176,7 @@ a:link { color: #0076C5}</style>
                         <li><a href="Typesetting.html">Typesetting</a></li>
                     </ol>
                     <div class="nav-arrows">
-                        <div class="btn-group btn-group-xs" role="group"><a class="btn btn-default" href="Typesetting.html" title="Typesetting" role="button"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></a><a class="btn btn-default" href="Pracazwideo.html" title="Praca z wideo" role="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a><a class="btn btn-default" href="Narzedziaedycjiwizualnej.html" title="Narz&#281;dzia edycji wizualnej" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
+                        <div class="btn-group btn-group-xs" role="group"><a class="btn btn-default" href="Typesetting.html" title="Typesetting" role="button"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></a><a class="btn btn-default" href="Pracazwideo.html" title="Praca z wideo" role="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a><a class="btn btn-default" href="Probnikkoloru.html" title="Pr&oacute;bnik koloru" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
                     </div>
                 </div> 
             
@@ -190,38 +190,40 @@ a:link { color: #0076C5}</style>
 <p></p>
 <h1 class="rvps4"><span class="rvts0"><span class="rvts15">Okno wyboru koloru</span></span></h1>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
-<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem28.png"></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/okno-wyboru-koloru.png"></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
-<li value="1" class="rvps6"><span class="rvts6">Podgląd wybranego koloru, czyli tego który zostanie wstawiony.</span></li>
-<li value="2" class="rvps6"><span class="rvts6">Spektrum kolorów kliknięcie w dowolne miejsce na nim zmienia kolor na aktualnie wybrany, gamę kolorów zmieniamy suwakiem (3).</span></li>
+<li value="1" class="rvps6"><span class="rvts6">Lista typu koloru przydatne, by zmieniać typ koloru bez zamykania okna. Obecnie działa tylko w polu edycji linijki, później i dodam to do edycji stylów.</span></li>
+<li value="2" class="rvps6"><span class="rvts6">Podgląd wybranego koloru, czyli tego który zostanie wstawiony.</span></li>
 <li value="3" class="rvps6"><span class="rvts6">Suwak do zmiany kolorów.</span></li>
 <li value="4" class="rvps6"><span class="rvts6">Suwak do zmiany przezroczystości.</span></li>
-<li value="5" class="rvps6"><span class="rvts6">Pole do ręcznej zmiany koloru RGB, kolor czerwony wartość od 0 do 255.</span></li>
-<li value="6" class="rvps6"><span class="rvts6">Pole do ręcznej zmiany koloru RGB, kolor zielony wartość od 0 do 255.</span></li>
-<li value="7" class="rvps6"><span class="rvts6">Pole do ręcznej zmiany koloru RGB, kolor niebieski wartość od 0 do 255.</span></li>
-<li value="8" class="rvps6"><span class="rvts6">Kolor ASS w hexach (liczbach szesnastkowych), przyjmuje po kolei wartości niebieski, zielony, czerwony, odwrotnie niż w przypadku kolorów HTML.</span></li>
-<li value="9" class="rvps6"><span class="rvts6">Kolor HTML w hexach (liczbach szesnastkowych), przyjmuje po kolei wartości czerwony, zielony, niebieski, odwrotnie jak w przypadku kolorów ASS.</span></li>
-<li value="10" class="rvps6"><span class="rvts6">Przezroczystość może przyjmować wartości od 0 (brak przezroczystości) do 255 (całkowita przezroczystość).</span></li>
-<li value="11" class="rvps6"><span class="rvts6">Odcień koloru HSL przyjmuje wartości od 0 do 255.</span></li>
-<li value="12" class="rvps6"><span class="rvts6">Nasycenie koloru HSL przyjmuje wartości od 0 do 255.</span></li>
-<li value="13" class="rvps6"><span class="rvts6">Jaskrawość koloru HSL przyjmuje wartości od 0 do 255.</span></li>
-<li value="14" class="rvps6"><span class="rvts6">Odcień koloru HSV przyjmuje wartości od 0 do 255.</span></li>
-<li value="15" class="rvps6"><span class="rvts6">Nasycenie koloru HSV przyjmuje wartości od 0 do 255.</span></li>
-<li value="16" class="rvps6"><span class="rvts6">Wartość definiuje poziom światła białego koloru HSV mieści się w przedziale od 0 do 255.</span></li>
+<li value="5" class="rvps6"><span class="rvts6">Spektrum kolorów kliknięcie w dowolne miejsce na nim zmienia kolor na aktualnie wybrany, gamę kolorów zmieniamy suwakiem (3).</span></li>
+<li value="6" class="rvps6"><span class="rvts6">Pole do ręcznej zmiany koloru RGB, kolor czerwony wartość od 0 do 255.</span></li>
+<li value="7" class="rvps6"><span class="rvts6">Pole do ręcznej zmiany koloru RGB, kolor zielony wartość od 0 do 255.</span></li>
+<li value="8" class="rvps6"><span class="rvts6">Pole do ręcznej zmiany koloru RGB, kolor niebieski wartość od 0 do 255.</span></li>
+<li value="9" class="rvps6"><span class="rvts6">Kolor ASS w hexach (liczbach szesnastkowych), przyjmuje po kolei wartości niebieski, zielony, czerwony, odwrotnie niż w przypadku kolorów HTML.</span></li>
+<li value="10" class="rvps6"><span class="rvts6">Kolor HTML w hexach (liczbach szesnastkowych), przyjmuje po kolei wartości czerwony, zielony, niebieski, odwrotnie jak w przypadku kolorów ASS.</span></li>
+<li value="11" class="rvps6"><span class="rvts6">Przezroczystość może przyjmować wartości od 0 (brak przezroczystości) do 255 (całkowita przezroczystość).</span></li>
+<li value="12" class="rvps6"><span class="rvts6">Odcień koloru HSL przyjmuje wartości od 0 do 255.</span></li>
+<li value="13" class="rvps6"><span class="rvts6">Nasycenie koloru HSL przyjmuje wartości od 0 do 255.</span></li>
+<li value="14" class="rvps6"><span class="rvts6">Jaskrawość koloru HSL przyjmuje wartości od 0 do 255.</span></li>
+<li value="15" class="rvps6"><span class="rvts6">Odcień koloru HSV przyjmuje wartości od 0 do 255.</span></li>
+<li value="16" class="rvps6"><span class="rvts6">Nasycenie koloru HSV przyjmuje wartości od 0 do 255.</span></li>
+<li value="17" class="rvps6"><span class="rvts6">Wartość definiuje poziom światła białego koloru HSV mieści się w przedziale od 0 do 255.</span></li>
 </ol>
 <p class="rvps6"><span class="rvts6">HSL i HSV są zbliżone do siebie, różnią się tylko ostatnią składową, wizualnie przypomina to stożek o czarnym wierzchołku tęczowej podstawie i białym środkowym punkcie tej podstawy.</span></p>
 <ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
-<li value="17" class="rvps6"><span class="rvts6">próbnik kolorów, działa na całym ekranie, umożliwiając pobieranie kolorów nie tylko z wideo.</span></li>
-<li value="18" class="rvps6"><span class="rvts6">Wycinek ekranu po po użyciu próbnika pozwalający na dokładniejsze wybranie koloru, po kliknięciu w niego automatycznie zmienia się wybrany kolor (1).</span></li>
-<li value="19" class="rvps6"><span class="rvts6">Ostatnio wybierane kolory.</span></li>
-<li value="20" class="rvps6"><span class="rvts6">Zamyka okno i zastosowuje zmiany.</span></li>
-<li value="21" class="rvps6"><span class="rvts6">Zamyka okno anulując zmiany.</span></li>
+<li value="18" class="rvps6"><span class="rvts6">próbnik kolorów, działa na całym ekranie, umożliwiając pobieranie kolorów nie tylko z wideo. Używając prawego przycisku myszy można przenieść kliknięty kolor bezpośrednio do pola tekstowego (dobre gdy tło jest jednokolorowe i nie potrzeba precyzji).</span></li>
+<li value="19" class="rvps6"><span class="rvts6">Wycinek ekranu po po użyciu próbnika pozwalający na dokładniejsze wybranie koloru, po kliknięciu w niego automatycznie zmienia się wybrany kolor (1).</span></li>
+<li value="20" class="rvps6"><span class="rvts6">Ostatnio wybierane kolory.</span></li>
+<li value="21" class="rvps6"><span class="rvts6">Zamyka okno i zastosowuje zmiany.</span></li>
+<li value="22" class="rvps6"><span class="rvts6">Zamyka okno anulując zmiany.</span></li>
+<li value="23" class="rvps6"><span class="rvts6">Zamienia skróty próbnika kolorów i okna wyboru kolorów. Domyślnie po kliknięciu w przycisk koloru lewym przyciskiem otwiera się okno wyboru koloru. Po zahaczenia tego pola będzie się otwierał próbnik kolorów.</span></li>
 </ol>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p></p>
-<p class="rvps5" style="clear: both;"><span class="rvts12">Created with the Personal Edition of HelpNDoc: </span><a class="rvts13" href="https://www.helpauthoringsoftware.com">News and information about help authoring tools and software</a></p>
+
 
             </div>
             
