--- a/Paseknarzedzi.html
+++ b/Paseknarzedzi.html
@@ -192,11 +192,13 @@ a:link { color: #0076C5}</style>
 <p class="rvps2"><span class="rvts20"><br/></span></p>
 <p class="rvps2"><span class="rvts6">Ze względów niewydolnościowych tradycyjnego paska narzędzi Windows (powodował niechciane przebłyski) napisałem własny, ma on dodatkowe możliwości co też zamierzam opisać. Chodzi tu o dodawanie i usuwanie ikon paska, po kliknięciu w strzałkę poniżej ikon otwiera nam się menu wyboru ikon.</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem60.png"></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/pasek-narzdzi1.png"></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts6">Kliknięcie w element z haczykiem powoduje usunięcie go z paska, a element bez haczyka dodaje go na pasek narzędzi, zahaczając od razu wybrać można prawie wszystkie ikony z menu, a ikony z podmenu, np ostatnio otwarte napisy wyświetlają menu z zawartością. To menu wyświetla od razu skróty klawiszowe, które można zmienić w opcjach -&gt; hotkeys bądź ustawić w przypadku gdy jeszcze nie jest ustawiony przytrzymując shift podczas klikania w element menu.</span></p>
+<p class="rvps2"><span class="rvts6">Kliknięcie w element z haczykiem powoduje usunięcie go z paska, a element bez haczyka dodaje go na pasek narzędzi, zahaczając od razu wybrać można prawie wszystkie ikony z menu, a ikony z podmenu, np ostatnio otwarte napisy wyświetlają menu z zawartością. </span></p>
+<p class="rvps2"><span class="rvts6">To menu wyświetla od razu skróty klawiszowe, które można zmienić w opcjach -&gt; skróty klawiszowe bądź ustawić w przypadku, gdy jeszcze nie jest ustawiony przytrzymując shift podczas klikania w element menu.</span></p>
+<p class="rvps2"><span class="rvts6">Na liście u samej góry można zmienić pozycję paska narzędzi.</span></p>
 <p></p>
-<p class="rvps5" style="clear: both;"><span class="rvts12">Created with the Personal Edition of HelpNDoc: </span><a class="rvts13" href="https://www.helpndoc.com/feature-tour">Easily create EPub books</a></p>
+
 
             </div>
             
