--- a/Przenoszenietekstujednychnapisow.html
+++ b/Przenoszenietekstujednychnapisow.html
@@ -195,35 +195,46 @@ a:link { color: #0076C5}</style>
 <p class="rvps2"><span class="rvts6">Później z </span><a class="rvts18" href="Edycjanapisow.html#Menu%20pola%20napis%C3%B3w">menu pola napisów</a><span class="rvts6"> wybieramy "Wklej tekst tłumaczenia" i wczytujemy napisy z dobrym tłumaczeniem.</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps6"><span class="rvts6">Pole napisów po wczytaniu wygląda tak:</span></p>
-<p class="rvps6"><img alt="" style="padding : 1px;" src="lib/NewItem20.png"></p>
+<p class="rvps6"><img alt="" style="padding : 1px;" src="lib/Zmiana timingu jednych napisw na drugie.png"></p>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
 <p class="rvps2"><span class="rvts6">Jak widać polski tekst jest już na początku przesunięty o 4 linijki, aby to poprawić wykorzystujemy "Okno przesuwania dialogów", które znajduje się pod "Wklej tekst tłumaczenia".</span></p>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
-<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem24.png"></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/odt.png"></p>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
 <p class="rvps2"><span class="rvts6">To okno daje spore możliwości przesuwania obu kolumn, zarówno kolumny Tekst jak i Tekst tłumaczenia.</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps6"><span class="rvts17">Opcje przesuwania kolumny Tekst tłumaczenia:</span></p>
-<p class="rvps2"><span class="rvts17">Usuń linię</span><span class="rvts6"> - przenosi tekst tłumaczenia w górę, usuwając tekst z przesuniętej linijki, gdy chcemy przesunąć w górę o kilka linijek wystarczy że zaznaczymy w pierwszej linię dokąd ma być ona przesunięta, a w drugiej linię od której zaczynamy przesuwać.</span></p>
-<p class="rvps2"><span class="rvts16"><br/></span></p>
-<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem25.png"></p>
-<p class="rvps2"><span class="rvts16"><br/></span></p>
-<p class="rvps6"><span class="rvts6">Po wciśnięciu przycisku przesunie nam "Sprawiasz, że cię nienawidzę..." do linijki z "You make me hate you so much"</span></p>
-<p class="rvps6"><span class="rvts6"><br/></span></p>
-<p class="rvps6"><span class="rvts17">Dodaj linię</span><span class="rvts6"> - przesuwa tekst tłumaczenia w dół od pierwszej zaznaczonej linijki do drugiej zaznaczonej bądź o jedno pole, gdy takowej nie ma.</span></p>
-<p class="rvps6"><span class="rvts6"><br/></span></p>
-<p class="rvps6"><span class="rvts17">Złącz linie</span><span class="rvts6"> - podobne do pierwszej opcji z taką różnicą, że tłumaczenie nie zostaje usunięte, a dołączone do siebie ze znakami podziału linii \N.</span></p>
-<p class="rvps6"><span class="rvts27"><br/></span></p>
 <p class="rvps6"><span class="rvts17">Opcje przesuwania kolumny Tekst (oryginał):</span></p>
-<p class="rvps6"><span class="rvts17">Złącz linie</span><span class="rvts6"> - przesuwa tekst oryginału w górę i łączy cały tekst od pierwszej zaznaczonej linii do drugiej. </span></p>
-<p class="rvps6"><span class="rvts6">Dobre w przypadku, gdy w oryginale rozbito wypowiedź na dwie linie a w tłumaczeniu jest jedna.</span></p>
-<p class="rvps6"><span class="rvts6"><br/></span></p>
-<p class="rvps6"><span class="rvts17">Usuń linię</span><span class="rvts6"> - podobnie jak w pierwszym przypadku tyle że zamiast łączyć linie to je usuwa. </span></p>
-<p class="rvps6"><span class="rvts6">Dobre, gdy w oryginale są jakieś dodatkowe wypowiedzi albo opisy których nie mamy w tłumaczeniu a chcemy je usunąć.</span></p>
-<p class="rvps6"><span class="rvts6"><br/></span></p>
-<p class="rvps6"><span class="rvts17">Dodaj linię</span><span class="rvts6"> - dodaje pustą linię, przesuwa tekst oryginału w dół. </span></p>
-<p class="rvps6"><span class="rvts6">Dobre, gdy w tłumaczeniu jest jakiś tekst którego nie ma w oryginale, a chcemy go zostawić, dodaje wtedy dodatkową linijkę, którą należy stimingować samemu.</span></p>
+<p class="rvps6"><span class="rvts17"><br/></span></p>
+<ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
+<li value="1" class="rvps6"><span class="rvts6">dodaje pustą linię, przesuwa tekst oryginału w dół. Dobre, gdy w tłumaczeniu jest jakiś tekst którego nie ma w oryginale, a chcemy go zostawić, dodaje wtedy dodatkową linijkę, którą należy stimingować samemu.</span></li>
+</ol>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
+<ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
+<li value="2" class="rvps6"><span class="rvts6">przesuwa tekst oryginału w górę i łączy cały tekst od pierwszej zaznaczonej linii do drugiej. Dobre w przypadku, gdy w oryginale rozbito wypowiedź na dwie linie, a w tłumaczeniu jest jedna.</span></li>
+</ol>
+<p class="rvps6"><span class="rvts6"><br/></span></p>
+<ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
+<li value="3" class="rvps6"><span class="rvts6">podobnie jak w pierwszym przypadku, tyle że zamiast łączyć linie to je usuwa. Dobre, gdy w oryginale są jakieś dodatkowe wypowiedzi albo opisy których nie mamy w tłumaczeniu a chcemy je usunąć.</span></li>
+</ol>
+<p class="rvps6"><span class="rvts6"><br/></span></p>
+<p class="rvps6"><span class="rvts17">Opcje przesuwania kolumny Tekst tłumaczenia:</span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
+<li value="4" class="rvps6"><span class="rvts6">przesuwa tekst tłumaczenia w dół od pierwszej zaznaczonej linijki do drugiej zaznaczonej bądź o jedno pole, gdy takowej nie ma.</span></li>
+</ol>
+<p class="rvps6"><span class="rvts6"><br/></span></p>
+<ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
+<li value="5" class="rvps6"><span class="rvts6">podobne do pierwszej opcji z taką różnicą, że tłumaczenie nie zostaje usunięte, a dołączone do siebie ze znakami podziału linii \N.</span></li>
+</ol>
+<p class="rvps6"><span class="rvts28"><br/></span></p>
+<ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
+<li value="6" class="rvps2"><span class="rvts6">przenosi tekst tłumaczenia w górę, usuwając tekst z przesuniętej linijki, gdy chcemy przesunąć w górę o kilka linijek wystarczy że zaznaczymy w pierwszej linię dokąd ma być ona przesunięta, a w drugiej linię od której zaczynamy przesuwać.</span></li>
+</ol>
+<p class="rvps2"><span class="rvts16"><br/></span></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/porownanie.png"></p>
+<p class="rvps2"><span class="rvts16"><br/></span></p>
+<p class="rvps6"><span class="rvts6">Po wciśnięciu przycisku przesunie nam "I wtedy młody chłopak zobaczył hagoromo wiszące na drzewie i skradł je." do linijki z "The young man stole away\Nwith the heavenly robe..."</span></p>
+<p class="rvps6"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6">Przy odrobinie szczęścia i wprawy można całe napisy dopasować w czasie pół godziny albo krótszym, no chyba, że jedne napisy robił jakiś maniak złączania / dzielenia linijek.</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6">Zapisywanie napisów opisałem w temacie </span><a class="rvts18" href="Trybtlumaczenia.html#Zapisywanie%20tekstu%20t%C5%82umaczenia">Tryb tłumaczenia.</a></p>
@@ -231,7 +242,7 @@ a:link { color: #0076C5}</style>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p></p>
-<p class="rvps5" style="clear: both;"><span class="rvts12">Created with the Personal Edition of HelpNDoc: </span><a class="rvts13" href="https://www.helpndoc.com/feature-tour">Easily create PDF Help documents</a></p>
+
 
             </div>
             
