--- a/Sprawdzaniepisowni.html
+++ b/Sprawdzaniepisowni.html
@@ -190,17 +190,40 @@ a:link { color: #0076C5}</style>
 <p></p>
 <h1 class="rvps4"><span class="rvts0"><span class="rvts15">Sprawdzanie pisowni</span></span></h1>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
-<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem16.png"></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/spr-pisowni.png"></p>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
 <p class="rvps2"><span class="rvts6">Kainote ma podobne sprawdzanie pisowni, co Aegisub czy Firefox, dwa pliki słownika o rozszerzeniu dic i aff, można oprócz tego dodawać własne słowa do słownika, klikając prawym przyciskiem na błąd i wybierając "Dodaj słowo "..." do słownika". </span></p>
 <p class="rvps2"><span class="rvts6">Błędy podkreśla zarówno w polu edycji jak i polu napisów, co ułatwia późniejsze sprawdzanie poprawności całych napisów. </span></p>
 <p class="rvps2"><span class="rvts6">Kolor podkreślenia błędów pisowni można zmienić w opcjach Edytor -&gt; Kolorystyka -&gt; Kolor tła błędów pisowni.</span></p>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
-<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem17.png"></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/spr-pisowni-ustawienia.png"></p>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
 <p class="rvps2"><span class="rvts6">W opcji Edytor można także włączyć lub wyłączyć sprawdzanie błędów pisowni.</span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<h3 class="rvps8"><a name="Okno_sprawdzania_pisowni"></a>
+<span class="rvts0"><span class="rvts26">Okno sprawdzania pisowni</span></span></h3>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts6">Pozwala na szybkie wyszukanie błędów pisowni i ich poprawę.</span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/spr-pisowni-spellchecker.png"></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
+<li value="1" class="rvps2"><span class="rvts6">Wyświetla błędne słowo znalezione w napisach.</span></li>
+<li value="2" class="rvps2"><span class="rvts6">Pole, gdzie wpisujemy na co ma zostać błędne słowo zmienione bądź wybieramy sugestię z listy (3).</span></li>
+<li value="3" class="rvps2"><span class="rvts6">Lista z sugestiami z której możemy bezpośrednio wybrać poprawne słowo.</span></li>
+<li value="4" class="rvps2"><span class="rvts6">Włączenie tej opcji ignoruje komentarze w przypadku formatu ASS.</span></li>
+<li value="5" class="rvps2"><span class="rvts6">Ignorowanie słów z dużej litery aktualnie nieaktywne (jeszcze nie zrobione).</span></li>
+<li value="6" class="rvps2"><span class="rvts6">Zamienia błędne słowo i szuka następnego.</span></li>
+<li value="7" class="rvps2"><span class="rvts6">Zamienia wszystkie wystąpienia tego błędnego słowa i szuka następnego.</span></li>
+<li value="8" class="rvps2"><span class="rvts6">Ignoruje to jedno wystąpienie błędnego słowa.</span></li>
+<li value="9" class="rvps2"><span class="rvts6">Ignoruje wszystkie wystąpienia błędnego słowa.</span></li>
+<li value="10" class="rvps2"><span class="rvts6">Dodaje słowo do słownika.</span></li>
+<li value="11" class="rvps2"><span class="rvts6">Usuwa słowo ze słowika nieaktywne, bo jeszcze nie zrobione.</span></li>
+<li value="12" class="rvps2"><span class="rvts6">Zamyka okno sprawdzania pisowni.</span></li>
+</ol>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
 <p></p>
-<p class="rvps5" style="clear: both;"><span class="rvts12">Created with the Personal Edition of HelpNDoc: </span><a class="rvts13" href="https://www.helpndoc.com/feature-tour">Easily create HTML Help documents</a></p>
+
 
             </div>
             
