--- a/Trybtlumaczenia.html
+++ b/Trybtlumaczenia.html
@@ -190,7 +190,7 @@ a:link { color: #0076C5}</style>
 <p></p>
 <h1 class="rvps4"><span class="rvts0"><span class="rvts15">Tryb tłumaczenia</span></span></h1>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
-<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem19.png"></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/tryb-tumaczenia1.png"></p>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
 <ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
 <li value="1" class="rvps6"><span class="rvts6">Włączanie trybu tłumaczenia, działa tylko po wczytaniu napisów w formacie ASS.</span></li>
@@ -212,7 +212,7 @@ a:link { color: #0076C5}</style>
 <p class="rvps2"><a name="Zapisywanie tekstu tłumaczenia"></a>
 <span class="rvts6">W przypadku użycia trybu tłumaczenia, gotowy przekład należy zapisać przez użycie opcji „zapisz tłumaczenie” w menu plik, bądź wyłączyć tryb tłumaczenia i wtedy zapisać. Przy włączonym trybie tłumaczenia w napisach zapisywane są osobne linijki z tekstem obcojęzycznym i tłumaczenia, napisy otwarte innym programem wtedy będą miały wyświetlone podwójne linie. Dodanie nowych linii i usunięcie innych nie powinno mieć dużego wpływu na ponowne otwarcie w Kainote.</span></p>
 <p></p>
-<p class="rvps5" style="clear: both;"><span class="rvts12">Created with the Personal Edition of HelpNDoc: </span><a class="rvts13" href="https://www.helpndoc.com">Free EBook and documentation generator</a></p>
+
 
             </div>
             
