--- a/Tutoriale.html
+++ b/Tutoriale.html
@@ -188,9 +188,17 @@ a:link { color: #0076C5}</style>
             <div class="main-content">
                 
 <p></p>
-<p class="rvps2"><span class="rvts6">Wkrótce.</span></p>
+<h1 class="rvps4"><span class="rvts0"><span class="rvts11">Tutoriale</span></span></h1>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts6">Tutoriale dotyczące programu można znaleźć pod linkami:</span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts6">Używanie Aegisub - Motion w Kainote: </span><a class="rvts18" href="https://www.youtube.com/watch?v=AEwtTVjXdIo" target="_blank">https://www.youtube.com/watch?v=AEwtTVjXdIo</a><span class="rvts6">.</span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts6">Robienie podziału karaoke z użyciem spektrum: </span><a class="rvts18" href="https://www.youtube.com/watch?v=4be0onjzTFI">https://www.youtube.com/watch?v=4be0onjzTFI</a><span class="rvts6">.</span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
 <p></p>
-<p class="rvps5" style="clear: both;"><span class="rvts12">Created with the Personal Edition of HelpNDoc: </span><a class="rvts13" href="https://www.helpndoc.com/help-authoring-tool">Easy to use tool to create HTML Help files and Help web sites</a></p>
+
 
             </div>
             
