--- a/Tworzeniepodzialukaraoke.html
+++ b/Tworzeniepodzialukaraoke.html
@@ -176,7 +176,7 @@ a:link { color: #0076C5}</style>
                         <li><a href="Timing.html">Timing</a></li>
                     </ol>
                     <div class="nav-arrows">
-                        <div class="btn-group btn-group-xs" role="group"><a class="btn btn-default" href="Timing.html" title="Timing" role="button"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></a><a class="btn btn-default" href="Pracazaudio.html" title="Praca z audio" role="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a><a class="btn btn-default" href="Przesuwanieczasownapisow.html" title="Przesuwanie czas&oacute;w napis&oacute;w" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
+                        <div class="btn-group btn-group-xs" role="group"><a class="btn btn-default" href="Timing.html" title="Timing" role="button"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></a><a class="btn btn-default" href="Pracazaudio.html" title="Praca z audio" role="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a><a class="btn btn-default" href="Przesuwanieczasownapisowipostpro.html" title="Przesuwanie czas&oacute;w napis&oacute;w i post processor" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
                     </div>
                 </div> 
             
@@ -190,24 +190,24 @@ a:link { color: #0076C5}</style>
 <p></p>
 <h1 class="rvps4"><span class="rvts0"><span class="rvts15">Tworzenie podziału karaoke</span></span></h1>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
-<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem62.png"></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/karaoke.png"></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
-<li value="1" class="rvps6"><span class="rvts6">Znacznik czasu początkowego.</span></li>
-<li value="2" class="rvps6"><span class="rvts6">Znacznik czasu końcowego.</span></li>
-<li value="3" class="rvps6"><span class="rvts6">Tekst sylaby.</span></li>
-<li value="4" class="rvps6"><span class="rvts6">Załączanie / Wyłączanie tworzenia podziału karaoke (przy włączeniu podziału powiększa wykres w poziomie o 20%).</span></li>
-<li value="5" class="rvps6"><span class="rvts6">Załączanie / Wyłączanie automatycznego dzielenia sylab.</span></li>
-<li value="6" class="rvps6"><span class="rvts6">Aktywna sylaba zaznaczona jest czerwoną obwódką.</span></li>
+<li value="1" class="rvps6"><span class="rvts6">Załączanie / Wyłączanie tworzenia podziału karaoke (przy włączeniu podziału powiększa wykres w poziomie o 20%).</span></li>
+<li value="2" class="rvps6"><span class="rvts6">Załączanie / Wyłączanie automatycznego dzielenia sylab.</span></li>
+<li value="3" class="rvps6"><span class="rvts6">Znacznik czasu początkowego.</span></li>
+<li value="4" class="rvps6"><span class="rvts6">Znacznik czasu końcowego.</span></li>
+<li value="5" class="rvps6"><span class="rvts6">Aktywna sylaba zaznaczona jest czerwoną obwódką.</span></li>
+<li value="6" class="rvps6"><span class="rvts6">Tekst sylaby.</span></li>
 <li value="7" class="rvps6"><span class="rvts6">Linia podziału sylab.</span></li>
 </ol>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts6">W przypadku tekstu japońskiego podział jest bardzo ułatwiony, bo włączając automatyczne dzielenie sylab (5) dostajemy cały tekst podzielony na sylaby, wystarczy tylko przeciągnąć żółte linie (7), przytrzymując lewy przycisk myszy tak, by dopasować tekst do tego co słychać.</span></p>
+<p class="rvps2"><span class="rvts6">W przypadku tekstu japońskiego podział jest bardzo ułatwiony, bo włączając automatyczne dzielenie sylab (2) dostajemy cały tekst podzielony na sylaby, wystarczy tylko przeciągnąć żółte linie (7), przytrzymując lewy przycisk myszy tak, by dopasować tekst do tego co słychać. Możemy też włączyć opcję </span><a class="rvts18" href="Opcje.html#Option_click_on_active_syllable">przestawiania aktywnej sylaby kliknięciem</a><span class="rvts6">, przyspieszy pracę przy podziale.</span></p>
 <p class="rvps2"><span class="rvts6">W przypadku tekstu angielskiego albo w jeszcze innym języku należy wyłączyć automatyczny podział i podzielić samemu.</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6">Sylaby dzielimy, najeżdżając myszą na żółty tekst, wtedy pojawia się czerwona linia pokazująca miejsce, w którym zostanie on podzielony, wystarczy wtedy kliknąć lewym przyciskiem, by dokonać podziału.</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts6">Kasowanie podziału można zrobić po najechaniu myszką na żółtą linię i w momencie gdy pojawiają się dwie strzałki kliknąć środkowy przycisk myszy.</span></p>
+<p class="rvps2"><span class="rvts6">Kasowanie podziału można zrobić po najechaniu myszką na żółtą linię i w momencie, gdy pojawiają się dwie strzałki kliknąć środkowy przycisk myszy.</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6">Odsłuchiwanie sylab najlepiej robić, używając skrótów klawiszowych, strzałka w lewo - poprzednia sylaba, strzałka w dół - aktywna sylaba, strzałka w prawo - następna sylaba. Można też kliknąć środkowym przyciskiem myszy w daną sylabę.</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
@@ -215,14 +215,15 @@ a:link { color: #0076C5}</style>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6">Prawy przycisk myszy przy przestawianiu sylab działa podobnie jak lewy z taką różnicą, że przesuwa też następne sylaby tak by w przypadku gdy sylaby uciekły za bardzo na prawo bądź nachodzą nam wręcz na aktywna sylabę łatwo to skorygować nie przesuwając wszystkich następnych sylab ręcznie.</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts6">Można także przesuwać czas początkowy lewym przyciskiem w przypadku gdy trzeba go skorygować co nie zmieni nam ustawionego już podziału sylab, prawym przyciskiem przesuwa razem z sylabami.</span></p>
+<p class="rvps2"><span class="rvts6">Można także przesuwać czas początkowy lewym przyciskiem w przypadku gdy trzeba go skorygować, co nie zmieni nam ustawionego już podziału sylab, prawym przyciskiem przesuwa razem z sylabami.</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts6">Czas końcowy jest automatycznie zlepiony z linią ostatniej sylaby aby przez pomyłkę nie wyjechać linią ostatniej sylaby za koniec linijki.</span></p>
+<p class="rvps2"><span class="rvts6">Czas końcowy jest automatycznie zlepiony z linią ostatniej sylaby, aby przez pomyłkę nie wyjechać linią ostatniej sylaby poza koniec linijki.</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6">Dobrą opcją w tym przypadku jest automatyczne zapisywanie zmian (przycisk na prawo od nr 5) co zapewni, że przy przejściu do następnej linii przy odsłuchiwaniu, korzystając z klawiatury nie skasujemy sobie wszystkich zmian. W przypadku odsłuchiwania myszą, nie jest to wymagane bo i tak musimy kliknąć zatwierdzenie bądź enter, by przejść do następnej linii.</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts6">Ten temat zawarłem w </span><a class="rvts18" href="Tutoriale.html">tutorialu</a><span class="rvts6">.</span></p>
 <p></p>
-<p class="rvps5" style="clear: both;"><span class="rvts12">Created with the Personal Edition of HelpNDoc: </span><a class="rvts13" href="https://www.helpndoc.com/feature-tour">Easily create HTML Help documents</a></p>
+
 
             </div>
             
