--- a/WklejKopiujkolumny.html
+++ b/WklejKopiujkolumny.html
@@ -190,7 +190,7 @@ a:link { color: #0076C5}</style>
 <p></p>
 <h1 class="rvps4"><span class="rvts0"><span class="rvts15">Wklej/Kopiuj kolumny</span></span></h1>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
-<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem14.png"></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/kopiuj-kolumny.png"></p>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
 <ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
 <li value="1" class="rvps6"><span class="rvts6">Wkleja lub kopiuje warstwę linijek.</span></li>
@@ -210,7 +210,7 @@ a:link { color: #0076C5}</style>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts17">Kopiowanie kolumn</span><span class="rvts6"> kopiuje wybrane elementy zaznaczonych linijek do schowka. Służy ona głównie do przenoszenia danych elementów do innych programów, nie można ich wkleić z powrotem do programu, bo do tego służy wyżej wymieniona opcja.</span></p>
 <p></p>
-<p class="rvps5" style="clear: both;"><span class="rvts12">Created with the Personal Edition of HelpNDoc: </span><a class="rvts13" href="https://www.helpndoc.com/feature-tour/create-ebooks-for-amazon-kindle">Free Kindle producer</a></p>
+
 
             </div>
             
