--- a/Wymagania.html
+++ b/Wymagania.html
@@ -191,12 +191,12 @@ a:link { color: #0076C5}</style>
 <h1 class="rvps4"><span class="rvts0"><span class="rvts15">Wymagania Kainote</span></span></h1>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside;">
-<li style="list-style-image: url('lib/11.bmp')" class="rvps6"><span class="rvts6">Podstawowym wymaganiem jest </span><span class="rvts17">Windows Vista</span><span class="rvts6"> bądź nowszy. </span></li>
-<li style="list-style-image: url('lib/11.bmp')" class="rvps6"><span class="rvts6">Dependency control wymaga Redista 2013 i 15, co objawiać się będzie pustymi błędami przy inicjalizacji skryptów które wykorzystują jego dlle.</span></li>
-<li style="list-style-image: url('lib/11.bmp')" class="rvps6"><span class="rvts6">Samo wideo przez FFMS2 i osobno wczytane audio nie ma tak dużych wymagań jak w przypadku starszych wersji Aegisuba.</span></li>
+<li style="list-style-image: url('lib/15.bmp')" class="rvps6"><span class="rvts6">Wymagany jest </span><span class="rvts17">Windows Vista</span><span class="rvts6"> bądź nowszy. </span></li>
+<li style="list-style-image: url('lib/15.bmp')" class="rvps6"><span class="rvts6">Dependency Control do skryptów automatyzacji wymaga Microsoft Visual C++ Redistributable 2013 i 15, ich brak objawia się pustymi błędami przy inicjalizacji skryptów, które wykorzystują jego dlle.</span></li>
+<li style="list-style-image: url('lib/15.bmp')" class="rvps6"><span class="rvts6">Wideo wczytane przez FFMS2 lub osobno wczytane audio nie ma tak dużych wymagań jak w przypadku starszych wersji Aegisuba.</span></li>
 </ul>
 <p></p>
-<p class="rvps5" style="clear: both;"><span class="rvts12">Created with the Personal Edition of HelpNDoc: </span><a class="rvts13" href="https://www.helpndoc.com/feature-tour/iphone-website-generation">Easily create iPhone documentation</a></p>
+
 
             </div>
             
