--- a/Zaznaczlinijki.html
+++ b/Zaznaczlinijki.html
@@ -192,7 +192,7 @@ a:link { color: #0076C5}</style>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
 <p class="rvps2"><span class="rvts25">Okno zaznaczania linijek zostało rozbudowane dodatkowo o akcje, które można wykonać z zaznaczonymi linijkami.</span></p>
 <p class="rvps2"><span class="rvts25"><br/></span></p>
-<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem12.png"></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/zaznacz-linijki1.png"></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
 <li value="1" class="rvps6"><span class="rvts6">Zaznacza linijki zawierające podaną frazę.</span></li>
@@ -204,24 +204,29 @@ a:link { color: #0076C5}</style>
 <li value="7" class="rvps6"><span class="rvts6">Szuka podanej frazy w stylach linijek.</span></li>
 <li value="8" class="rvps6"><span class="rvts6">Szuka podanej frazy w kolumnie aktor.</span></li>
 <li value="9" class="rvps6"><span class="rvts6">Szuka podanej frazy w kolumnie efekt.</span></li>
-<li value="10" class="rvps6"><span class="rvts6">Szuka tylko w dialogach.</span></li>
-<li value="11" class="rvps6"><span class="rvts6">Szuka tylko w komentarzach (zahaczenie obu opcji szuka we wszystkim).</span></li>
-<li value="12" class="rvps6"><span class="rvts6">Zaznacza linie w których wystąpiła bądź nie wystąpiła fraza zależy to od opcji 1-2.</span></li>
-<li value="13" class="rvps6"><span class="rvts6">Jak wyżej z tą różnicą, że nie kasuje wcześniejszego zaznaczenia.</span></li>
-<li value="14" class="rvps6"><span class="rvts6">Odznacza linie w których wystąpiła bądź nie wystąpiła fraza zależy to od opcji 1-2.</span></li>
-<li value="15" class="rvps6"><span class="rvts6">Opcja, którą wybieramy, gdy tylko chcemy zaznaczyć linijki.</span></li>
-<li value="16" class="rvps6"><span class="rvts6">Kopiuje zaznaczone linijki.</span></li>
-<li value="17" class="rvps6"><span class="rvts6">Wycina zaznaczone linijki.</span></li>
-<li value="18" class="rvps6"><span class="rvts6">Przenosi zaznaczone linijki na początek napisów.</span></li>
-<li value="19" class="rvps6"><span class="rvts6">Przenosi zaznaczone linijki na koniec napisów.</span></li>
-<li value="20" class="rvps6"><span class="rvts6">Ustawia zaznaczone linijki jako komentarz.</span></li>
-<li value="21" class="rvps6"><span class="rvts6">Usuwa zaznaczone linijki.</span></li>
-<li value="22" class="rvps6"><span class="rvts6">Po wybraniu wszystkich opcji klikamy aby zaznaczyć linie.</span></li>
-<li value="23" class="rvps6"><span class="rvts6">Zamyka okno zaznaczania linijek.</span></li>
+<li value="10" class="rvps6"><span class="rvts6">Szuka podanej frazy w kolumnie czasu początkowego.</span></li>
+<li value="11" class="rvps6"><span class="rvts6">Szuka podanej frazy w kolumnie czasu końcowego.</span></li>
+<li value="12" class="rvps6"><span class="rvts6">Szuka tylko w dialogach.</span></li>
+<li value="13" class="rvps6"><span class="rvts6">Szuka tylko w komentarzach (zahaczenie obu opcji szuka we wszystkim).</span></li>
+<li value="14" class="rvps6"><span class="rvts6">Zaznacza linie w których wystąpiła bądź nie wystąpiła fraza zależy to od opcji 1-2.</span></li>
+<li value="15" class="rvps6"><span class="rvts6">Jak wyżej z tą różnicą, że nie kasuje wcześniejszego zaznaczenia.</span></li>
+<li value="16" class="rvps6"><span class="rvts6">Odznacza linie w których wystąpiła bądź nie wystąpiła fraza zależy to od opcji 1-2.</span></li>
+<li value="17" class="rvps6"><span class="rvts6">Opcja, którą wybieramy, gdy tylko chcemy zaznaczyć linijki.</span></li>
+<li value="18" class="rvps6"><span class="rvts6">Kopiuje zaznaczone linijki.</span></li>
+<li value="19" class="rvps6"><span class="rvts6">Wycina zaznaczone linijki.</span></li>
+<li value="20" class="rvps6"><span class="rvts6">Przenosi zaznaczone linijki na początek napisów.</span></li>
+<li value="21" class="rvps6"><span class="rvts6">Przenosi zaznaczone linijki na koniec napisów.</span></li>
+<li value="22" class="rvps6"><span class="rvts6">Ustawia zaznaczone linijki jako komentarz.</span></li>
+<li value="23" class="rvps6"><span class="rvts6">Usuwa zaznaczone linijki.</span></li>
+<li value="24" class="rvps6"><span class="rvts6">Po wybraniu wszystkich opcji klikamy aby zaznaczyć linie.</span></li>
+<li value="25" class="rvps6"><span class="rvts6">Zaznacza linie we wszystkich otwartych zakładkach.</span></li>
+<li value="26" class="rvps6"><span class="rvts6">Zamyka okno zaznaczania linijek.</span></li>
 </ol>
+<p class="rvps6"><span class="rvts6"><br/></span></p>
+<p class="rvps6"><span class="rvts6">W przypadku filtrowania ukryte linijki nie są zaznaczone, ale gdy opcja </span><a class="rvts18" href="Edycjanapisow.html#Ignoruj_filtrowanie">Ignoruj filtrowanie przy akcjach</a><span class="rvts6"> jest zaznaczona wykonuje też akcje na ukrytych liniach.</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p></p>
-<p class="rvps5" style="clear: both;"><span class="rvts12">Created with the Personal Edition of HelpNDoc: </span><a class="rvts13" href="https://www.helpndoc.com">Easy EBook and documentation generator</a></p>
+
 
             </div>
             
