--- a/Pracazaudio.html
+++ b/Pracazaudio.html
@@ -189,48 +189,50 @@ a:link { color: #0076C5}</style>
                 
 <p></p>
 <p class="rvps2"><span class="rvts17"><br/></span></p>
-<p class="rvps2"><span class="rvts34">Pole audio (audiobox)</span></p>
+<p class="rvps2"><span class="rvts35">Pole audio (audiobox)</span></p>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
-<p class="rvps2"><span class="rvts6">Kainote ma wykres audio zarówno jako waveform jak i spektrum, pozwala również na timignowanie zarówno dialogów jak i karaoke.</span></p>
+<p class="rvps2"><span class="rvts6">Kainote ma wykres audio zarówno jako wykres falowy jak i spektrum, pozwala również na timignowanie zarówno dialogów jak i karaoke.</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem49.png"></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/praca-z-audio.png"></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
-<li value="1" class="rvps6"><span class="rvts6">Aktywna linijka, po prawej i lewej widać na ciemnofioletowo oznaczoną poprzednią i następną linijkę.</span></li>
+<li value="1" class="rvps6"><span class="rvts6">Aktywna linijka, po prawej i lewej widać na ciemno oznaczoną poprzednią i następną linijkę.</span></li>
 <li value="2" class="rvps6"><span class="rvts6">Odsłuchiwanie poprzedniej linijki.</span></li>
 <li value="3" class="rvps6"><span class="rvts6">Odsłuchiwanie następnej linijki.</span></li>
-<li value="4" class="rvps6"><span class="rvts6">Odsłuchiwanie aktywnej linijki.</span></li>
-<li value="5" class="rvps6"><span class="rvts6">Zatrzymanie odsłuchiwania.</span></li>
-<li value="6" class="rvps6"><span class="rvts6">Odsłuchiwanie sekundy przed znacznikiem audio (długość odsłuchiwania można zmienić w opcjach).</span></li>
-<li value="7" class="rvps6"><span class="rvts6">Odsłuchiwanie sekundy po znaczniku audio (długość odsłuchiwania można zmienić w opcjach).</span></li>
-<li value="8" class="rvps6"><span class="rvts6">Odsłuchiwanie pół sekundy przed czasem początkowym.</span></li>
-<li value="9" class="rvps6"><span class="rvts6">Odsłuchiwanie pół sekundy po czasie początkowym.</span></li>
-<li value="10" class="rvps6"><span class="rvts6">Odsłuchiwanie pół sekundy przed czasem końcowym.</span></li>
-<li value="11" class="rvps6"><span class="rvts6">Odsłuchiwanie pół sekundy po czasie końcowym.</span></li>
-<li value="12" class="rvps6"><span class="rvts6">Odtwarza od aktywnej linii do końca audio.</span></li>
-<li value="13" class="rvps6"><span class="rvts6">Wstawia wstęp.</span></li>
-<li value="14" class="rvps6"><span class="rvts6">Wstawia zakończenie.</span></li>
-<li value="15" class="rvps6"><span class="rvts6">Zapisuje zmiany.</span></li>
-<li value="16" class="rvps6"><span class="rvts6">Ustawia aktualną linijkę widoczną na wykresie.</span></li>
-<li value="17" class="rvps6"><span class="rvts6">Załączanie / wyłączanie tworzenia podziału karaoke.</span></li>
-<li value="18" class="rvps6"><span class="rvts6">Załączanie / wyłączanie automatycznego dzielenia sylab.</span></li>
-<li value="19" class="rvps6"><span class="rvts6">Automatyczne zatwierdzanie zmian.</span></li>
-<li value="20" class="rvps6"><span class="rvts6">Automatyczne przechodzenie do następnej linii po zatwierdzeniu zmian.</span></li>
-<li value="21" class="rvps6"><span class="rvts6">Automatycznie ustawia aktywną linijkę widoczną na wykresie.</span></li>
-<li value="22" class="rvps6"><span class="rvts6">Włączanie / wyłączanie spektrum audio.</span></li>
-<li value="23" class="rvps6"><span class="rvts6">Suwak skali poziomej.</span></li>
-<li value="24" class="rvps6"><span class="rvts6">Suwaki skali pionowej audio i głośności, by używać osobno wyłączyć przycisk (25).</span></li>
-<li value="25" class="rvps6"><span class="rvts6">Łączy / rozłącza suwaki (24).</span></li>
+<li value="4" class="rvps6"><span class="rvts6">Odsłuchiwanie aktywnej linijki (w przypadku karaoke odsłuchuje aktywną sylabę).</span></li>
+<li value="5" class="rvps6"><span class="rvts6">Odsłuchiwanie aktywnej linijki nawet przy włączonym karaoke.</span></li>
+<li value="6" class="rvps6"><span class="rvts6">Zatrzymanie odsłuchiwania.</span></li>
+<li value="7" class="rvps6"><span class="rvts6">Odsłuchiwanie sekundy przed znacznikiem audio (długość odsłuchiwania można zmienić w opcjach).</span></li>
+<li value="8" class="rvps6"><span class="rvts6">Odsłuchiwanie sekundy po znaczniku audio (długość odsłuchiwania można zmienić w opcjach).</span></li>
+<li value="9" class="rvps6"><span class="rvts6">Odsłuchiwanie pół sekundy przed czasem początkowym.</span></li>
+<li value="10" class="rvps6"><span class="rvts6">Odsłuchiwanie pół sekundy po czasie początkowym.</span></li>
+<li value="11" class="rvps6"><span class="rvts6">Odsłuchiwanie pół sekundy przed czasem końcowym.</span></li>
+<li value="12" class="rvps6"><span class="rvts6">Odsłuchiwanie pół sekundy po czasie końcowym.</span></li>
+<li value="13" class="rvps6"><span class="rvts6">Odtwarza od aktywnej linii do końca audio.</span></li>
+<li value="14" class="rvps6"><span class="rvts6">Wstawia wstęp.</span></li>
+<li value="15" class="rvps6"><span class="rvts6">Wstawia zakończenie.</span></li>
+<li value="16" class="rvps6"><span class="rvts6">Zapisuje zmiany.</span></li>
+<li value="17" class="rvps6"><span class="rvts6">Ustawia aktualną linijkę widoczną na wykresie.</span></li>
+<li value="18" class="rvps6"><span class="rvts6">Załączanie / wyłączanie tworzenia podziału karaoke.</span></li>
+<li value="19" class="rvps6"><span class="rvts6">Załączanie / wyłączanie automatycznego dzielenia sylab.</span></li>
+<li value="20" class="rvps6"><span class="rvts6">Automatyczne zatwierdzanie zmian.</span></li>
+<li value="21" class="rvps6"><span class="rvts6">Automatyczne przechodzenie do następnej linii po zatwierdzeniu zmian.</span></li>
+<li value="22" class="rvps6"><span class="rvts6">Automatycznie ustawia aktywną linijkę widoczną na wykresie.</span></li>
+<li value="23" class="rvps6"><span class="rvts6">Włączanie / wyłączanie spektrum audio.</span></li>
+<li value="24" class="rvps6"><span class="rvts6">Uwydatnianie widoczności głosu na spektrum audio, dobre szczególnie przy robieniu karaoke.</span></li>
+<li value="25" class="rvps6"><span class="rvts6">Suwak skali poziomej.</span></li>
+<li value="26" class="rvps6"><span class="rvts6">Suwaki skali pionowej audio i głośności, by używać osobno wyłączyć przycisk (27).</span></li>
+<li value="27" class="rvps6"><span class="rvts6">Łączy / rozłącza suwaki (25 i 26).</span></li>
 </ol>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6">Ustawianie timingu na audio polega głównie na odsłuchiwaniu audio i przemieszczaniu znacznika czasu początkowego i końcowego tak, by obejmowały daną wypowiedź.</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts6">Odsłuchiwanie aktywnej linijki można robić zarówno na przycisku (4), bądź klikając środkowym przyciskiem myszki (scroll).</span></p>
-<p class="rvps2"><span class="rvts6">Skróty do odsłuchiwania działają analogicznie jak przy podziale karaoke (przyciski 2 do 4), czyli strzałka w lewo - poprzednia linijka, strzałka w dół - aktywna linijka, strzałka w prawo - następna linijka. </span></p>
+<p class="rvps2"><span class="rvts6">Odsłuchiwanie aktywnej linijki można robić zarówno na przycisku (4-5), bądź klikając środkowym przyciskiem myszki (scroll).</span></p>
+<p class="rvps2"><span class="rvts6">Skróty do odsłuchiwania działają analogicznie jak przy podziale karaoke (przyciski 2 do 5), czyli strzałka w lewo - poprzednia linijka, strzałka w dół - aktywna linijka, strzałka w prawo - następna linijka, strzałka w górę - aktywna linijka z taką różnicą, że przy karaoke też odtwarza aktywną linię zamiast sylaby. </span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6">Przemieszczanie znaczników można robić w dwojaki sposób, klikając lewym w spektrum audio by przenieść znacznik początkowy, a prawym, by przenieść końcowy, bądź chwytając i przeciągając je myszą.</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts6">Gdy nie jesteśmy pewni czy ustawiliśmy dobrze początek i koniec można wydłużyć audio w poziomie dla większej dokładności suwakiem (23), bądź użyć przycisków (8 do 11) by odsłuchać audio przed i po starcie lub końcu.</span></p>
+<p class="rvps2"><span class="rvts6">Gdy nie jesteśmy pewni czy ustawiliśmy dobrze początek i koniec można wydłużyć audio w poziomie dla większej dokładności suwakiem (25), bądź użyć przycisków (8 do 11) by odsłuchać audio przed i po starcie lub końcu.</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6">Automatyczne przyklejanie do klatek kluczowych i poprzedniej oraz następnej linii można włączyć w opcjach audio i wtedy będzie działać zawsze, a wyłączanie ich następuje po przytrzymaniu shiftu. Przy wyłączonych tych opcjach włącza się je przytrzymując shift. Można to także zrobić korzystając ze skrótów klawiaturowych shift + lewo lub prawo.</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
@@ -241,17 +243,23 @@ a:link { color: #0076C5}</style>
 <p class="rvps2"><span class="rvts6">Ogólnie zalecam załączyć opcję automatycznej aktywacji pola audio po najechaniu myszą, co zdecydowanie ułatwi pracę i ustrzeże nas przed przestawianiem czasu początkowego przy aktywacji okna.</span></p>
 <p class="rvps2"><span class="rvts6">Poza tym najlepiej stosować skróty klawiszowe, to bardzo ułatwia pracę i redukuje czas przeskoków myszką z jednego pola na drugie.</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts20">Po włączeniu spektrum przyciskiem (22) wykres audio wygląda następująco:</span></p>
+<p class="rvps2"><span class="rvts20">Po włączeniu spektrum przyciskiem (23) wykres audio wygląda następująco:</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem48.png"></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/Praca z audio 2.png"></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts6">Klasyczny wygląd przeskok częstotliwości jest liniowy.</span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/praca z audio 3.png"></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts6">Wygląd nieliniowy, na którym o wiele lepiej widać częstotliwości głosu (po wciśnięciu przycisku 24).</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6">Po włączeniu spektrum wykres pokazuje częstotliwość, im wyżej tym wyższa częstotliwość. Kolory czarny / ciemnoniebieski (przy zaznaczeniu) oznaczają ciszę, a biały najsilniejszy dźwięk. Może na początku wygląda to trochę kłopotliwie, lecz z częstotliwości łatwiej jest określić położenia wypowiedzi / śpiewu w przypadku muzyki czy innych zakłóceń. Przydatne szczególne przy timingowaniu karaoke.</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6">W przypadku suwaka rozciągania w pionie powoduje zwiększenie intensywności białego koloru.</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts6">Obliczanie spektrum jest zużywa dużej mocy procesora, więc po ostatnich przeróbkach jak na razie nie ma ustawień odnośnie jakości co się jeszcze zmieni, bo zauważyłem kilka sposobów na zwiększenie jakości tylko wtedy gdy jest potrzeba, bo jaki sens ma wczytywanie do pamięci 10000 linii skoro wykorzystujemy 500 albo jeszcze mniej, dlatego też domyślne ustawienia jakościowe zmieniają się w zależności od skali poziomej, likwidując w ten sposób strasznie szerokie paski przy maksymalnym rozciągnięciu. Później jeszcze dodam zależność od długości wykresu, bo na pełnym ekranie przy ukrytym wideo widać trochę grubsze paski.</span></p>
+<p class="rvps2"><span class="rvts6">Obliczanie spektrum jest zużywa większej mocy procesora, gdy przewijanie suwakiem daje bardzo duże skoki spektrum najlepiej wczytać audio do pamięci RAM. Wtedy płynność się zwiększa, ale użycie pamięci może wzrosnąć o 1GB i więcej zależy od długości wideo, film używa ok 1GB.</span></p>
 <p></p>
-<p class="rvps5" style="clear: both;"><span class="rvts12">Created with the Personal Edition of HelpNDoc: </span><a class="rvts13" href="https://www.helpndoc.com/feature-tour">Easily create EBooks</a></p>
+
 
             </div>
             
