--- a/Pracazwideo.html
+++ b/Pracazwideo.html
@@ -197,7 +197,7 @@ a:link { color: #0076C5}</style>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts17">Panel sterowania wideo składa się z następujących elementów (1-11):</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem41.png"></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/praca-z-wideo.png"></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
 <li value="1" class="rvps6"><span class="rvts6">Suwak wideo, ustawia pozycję wideo, najechanie myszką na linię suwaka powoduje wyświetlenie czasu w którym zostanie wyświetlone wideo, gdy przestawimy tam suwak.</span></li>
@@ -210,45 +210,52 @@ a:link { color: #0076C5}</style>
 <li value="8" class="rvps6"><span class="rvts6">Klatka wideo (tylko przy wideo wczytanym przez FFMS2).</span></li>
 <li value="9" class="rvps6"><span class="rvts6">Różnica między czasem początkowym (12), a czasem wideo w milisekundach.</span></li>
 <li value="10" class="rvps6"><span class="rvts6">Różnica między czasem końcowym (13), a czasem wideo w milisekundach.</span></li>
-<li value="11" class="rvps6"><span class="rvts6">Suwak głośności przydaje się, gdy nie mamy wczytanego audio, wczytane audio ma większe możliwości zmiany głośności.</span></li>
 </ol>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts17">Pasek statusu wyświetla następujące informacje o wczytanym wideo:</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem45.png"></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/praca-z-wideo2.png"></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
-<li value="1" class="rvps6"><span class="rvts6">Czas trwania wideo.</span></li>
-<li value="2" class="rvps6"><span class="rvts6">FPS, w przypadku wideo o zmiennym FPS, FFMS2 pokazuje średni FPS, a DirectShow zaokrągla go do podstawowych wartości.</span></li>
-<li value="3" class="rvps6"><span class="rvts6">Rozdzielczość wideo.</span></li>
-<li value="4" class="rvps6"><span class="rvts6">Aspect Ratio w przypadku DirectShow dostaję już zaokrąglone wartości np 4:3 czy 16:9, ale w przypadku FFMS2 dostaję tylko numerator i denumerator przez które należy podzielić/pomnożyć jedną z wartości rozdzielczości, w przyszłości może napiszę algorytm do obliczania Aspect Ratio by ładnie to wyświetlało.</span></li>
-<li value="5" class="rvps6"><span class="rvts6">Nazwa pliku wideo.</span></li>
+<li value="1" class="rvps6"><span class="rvts6">Procentowa wielkość okna wideo.</span></li>
+<li value="2" class="rvps6"><span class="rvts6">Procentowe powiększenie wideo.</span></li>
+<li value="3" class="rvps6"><span class="rvts6">Czas trwania wideo.</span></li>
+<li value="4" class="rvps6"><span class="rvts6">FPS, w przypadku wideo o zmiennym FPS, FFMS2 pokazuje średni FPS, a DirectShow zaokrągla go do podstawowych wartości.</span></li>
+<li value="5" class="rvps6"><span class="rvts6">Rozdzielczość wideo.</span></li>
+<li value="6" class="rvps6"><span class="rvts6">Proporcje obrazu np. 4:3 czy 16:9.</span></li>
+<li value="7" class="rvps6"><span class="rvts6">Rozdzielczość napisów, w przypadku, gdy różni się od rozdzielczości wideo obie wartości są wyświetlane na w kolorze ostrzeżeń (zwykle czerwono albo żółto).</span></li>
+<li value="8" class="rvps6"><span class="rvts6">Nazwa pliku wideo.</span></li>
 </ol>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts17">Menu główne wideo składa się z następujących elementów:</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem46.png"></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/menu wideo.png"></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps6"><span class="rvts17">Otwórz wideo</span><span class="rvts6"> - włącza okno wyboru wideo.</span></p>
 <p class="rvps6"><span class="rvts17">Ostatnio otwarte wideo</span><span class="rvts6"> - wyświetla listę ostatnio otwartego wideo (pliki nieistniejące są automatycznie kasowane).</span></p>
+<p class="rvps6"><span class="rvts17">Otwórz klatki kluczowe</span><span class="rvts6"> - otwiera okno wyboru klatek kluczowych.</span></p>
+<p class="rvps6"><span class="rvts17">Ostatnio otwarte klatki kluczowe</span><span class="rvts6"> - wyświetla listę ostatnio otwartych klatek kluczowych (pliki nieistniejące są automatycznie kasowane).</span></p>
 <p class="rvps6"><span class="rvts17">Wstaw czas początkowy z wideo</span><span class="rvts6"> - ustawia czas wideo jako czas początkowy zaznaczonych linii. (dodaje pół klatki by czas był pomiędzy klatkami a nie na samym początku klatki, co mogłoby spowodować niekiedy złe wyświetlanie na wideo).</span></p>
 <p class="rvps6"><span class="rvts17">Wstaw czas początkowy z wideo</span><span class="rvts6"> - ustawia czas wideo jako czas końcowy zaznaczonych linii. (odejmuje pół klatki by czas był pomiędzy klatkami a nie na samym początku klatki, co mogłoby spowodować niekiedy złe wyświetlanie na wideo).</span></p>
 <p class="rvps6"><span class="rvts17">Klatka w tył</span><span class="rvts6"> - przechodzi w tył o jedną klatkę.</span></p>
 <p class="rvps6"><span class="rvts17">Klatka w przód</span><span class="rvts6"> - przechodzi w przód o jedną klatkę.</span></p>
 <p class="rvps6"><span class="rvts17">Przejdź do czasu początkowego linii</span><span class="rvts6"> - ustawia na wideo czas początkowy linii, to samo co dwukrotne kliknięcie na linii wszędzie oprócz czasu końcowego.</span></p>
 <p class="rvps6"><span class="rvts17">Przejdź do czasu końcowego linii</span><span class="rvts6"> - ustawia na wideo czas końcowy linii, to samo co dwukrotne kliknięcie na czasie końcowym.</span></p>
-<p class="rvps6"><span class="rvts17">Pauza</span><span class="rvts6"> - pauzuje wideo.</span></p>
-<p class="rvps6"><span class="rvts17">Odtwarzaj</span><span class="rvts6"> - włącza odtwarzanie wideo.</span></p>
+<p class="rvps6"><span class="rvts17">Odtwarzaj/Pauza</span><span class="rvts6"> - pauzuje wideo.</span></p>
+<p class="rvps6"><span class="rvts17">Przejdź do poprzedniej klatki kluczowej - </span><span class="rvts6">przechodzi do poprzedniej klatki kluczowej na wideo.(Klatki kluczowe są zwykle wstawiane na początku nowych scen co właśnie ułatwia timing do scen albo znalezienie początek, koniec jakiegoś efektu. O ile wideo ma poprawne klatki kluczowe, wtedy można wygenerować samemu klatki kluczowe i wczytać je, z tego samego menu.)</span></p>
+<p class="rvps6"><span class="rvts17">Przejdź do następnej klatki kluczowej - </span><span class="rvts6">przechodzi do następnej klatki kluczowej na wideo.</span></p>
+<p class="rvps6"><span class="rvts17">Ustaw audio z czasem wideo</span><span class="rvts6"> - przewija wykres audio tak, by aktualna pozycja wideo była widoczna.</span></p>
+<p class="rvps6"><span class="rvts17">Ustaw znacznik audio z czasem wideo</span><span class="rvts6"> - ustawia znacznik audio w pozycji wideo, jeśli nie jest włączony, włącza go.</span></p>
 <p class="rvps6"><a name="FFMS2"></a>
 <span class="rvts17">Otwieraj wideo przez FFMS2</span><span class="rvts6"> - odhaczona wczytuje wideo przez DirectShow (bez spektrum audio i klatek kluczowych). Zahaczenie powoduje wczytywanie wideo przez FfmpegSource2, tworzy index i wczytuje od razu spektrum audio.</span></p>
 <p class="rvps6"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts17">Menu okna wideo składa się z następujących elementów:</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem47.png"></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/menu wideo23.png"></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps6"><span class="rvts17">Kopiuj pozycję na wideo</span><span class="rvts6"> - kopiuje do schowka koordynaty wykorzystywane do pozycjonowania tekstu czy do clipów.</span></p>
 <p class="rvps6"><span class="rvts17">Odtwórz</span><span class="rvts6"> - odtwarza wczytane wideo.</span></p>
-<p class="rvps6"><span class="rvts17">Stop</span><span class="rvts6"> - zatrzymuje odtwarzanie.</span></p>
+<p class="rvps6"><span class="rvts17">Zatrzymaj</span><span class="rvts6"> - zatrzymuje odtwarzanie.</span></p>
 <p class="rvps6"><span class="rvts17">Pełny ekran</span><span class="rvts6"> - Włącza wideo na pełnym ekranie alternatywnie można używać dwukrotnego kliknięcia na wideo.</span></p>
 <p class="rvps6"><span class="rvts17">Otwórz edytor</span><span class="rvts6"> - włącza edytor, gdy jest wyłączony, bądź przechodzi do niego z pełnego ekranu.</span></p>
 <p class="rvps6"><span class="rvts17">Ostatnio otwarte napisy</span><span class="rvts6"> - wyświetla listę ostatnio otwartych napisów (pliki nieistniejące są automatycznie kasowane).</span></p>
@@ -256,21 +263,22 @@ a:link { color: #0076C5}</style>
 <p class="rvps6"><span class="rvts17">Otwórz napisy</span><span class="rvts6"> - włącza okno wyboru napisów.</span></p>
 <p class="rvps6"><span class="rvts17">Otwórz wideo</span><span class="rvts6"> - włącza okno wyboru wideo.</span></p>
 <p class="rvps6"><span class="rvts17">Ukryj / pokaż pasek postępu</span><span class="rvts6"> - opcja działa tylko na pełnym ekranie, pokazuje / ukrywa pasek postępu w prawym górnym rogu ekranu.</span></p>
-<p class="rvps6"><span class="rvts17">Zmień proporcje wideo</span><span class="rvts6"> - (eksperymentalne) zmienia aspect ratio wideo.</span></p>
+<p class="rvps6"><span class="rvts17">Zmień proporcje wideo</span><span class="rvts6"> - (eksperymentalne) zmienia proporcje wideo.</span></p>
 <p class="rvps6"><span class="rvts17">Zapisz klatkę z napisami jako PNG</span><span class="rvts6"> - Zapisuje aktualną klatkę z napisami w formacie PNG do folderu z wideo.</span></p>
 <p class="rvps6"><span class="rvts17">Zapisz klatkę z napisami do schowka</span><span class="rvts6"> - Zapisuje aktualną klatkę z napisami do schowka. (format w schowku prawdopodobnie BMP bo i tak reszta zależy od programu który tę klatkę przechwyci.)</span></p>
 <p class="rvps6"><span class="rvts17">Zapisz klatkę jako PNG</span><span class="rvts6"> - Zapisuje aktualną klatkę z bez napisów w formacie PNG do folderu z wideo.</span></p>
 <p class="rvps6"><span class="rvts17">Zapisz klatkę do schowka</span><span class="rvts6"> - Zapisuje aktualną klatkę bez napisów do schowka.</span></p>
 <p class="rvps6"><span class="rvts17">Usuń plik wideo</span><span class="rvts6"> - przenosi plik wideo do kosza i otwiera następny w katalogu.</span></p>
-<p class="rvps6"><span class="rvts17">Filtry</span><span class="rvts6"> - wyświetla listę użytych filtrów z możliwością otworzenia ich konfiguracji, gdy taką posiadają.</span></p>
+<p class="rvps6"><span class="rvts17">Filtry (tylko Direct Show)</span><span class="rvts6"> - wyświetla listę użytych filtrów z możliwością otworzenia ich konfiguracji, gdy taką posiadają.</span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;">
 <li style="margin-left: 0px" class="rvps7"><span class="rvts6">Pokazuje użyte ścieżki: wideo, audio i napisy z możliwością wybrania, wybieranie napisy działa tylko przy wyłączonym edytorze, a przy włączonym wczytuje zawsze napisy z edytora.</span></li>
 <li style="margin-left: 0px" class="rvps7"><span class="rvts6">Lista rozdziałów z możliwością wybrania konkretnego rozdziału, można to zrobić, także korzystając z przycisków "M" i "N", gdy aktywne jest okno wideo.</span></li>
 </ul>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts17">Ścieżki: Video, audio i napisów</span><span class="rvts6">, gdzie ścieżka napisów jest aktywna tylko przy wyłączonym edytorze.</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p></p>
-<p class="rvps5" style="clear: both;"><span class="rvts12">Created with the Personal Edition of HelpNDoc: </span><a class="rvts13" href="https://www.helpauthoringsoftware.com">Benefits of a Help Authoring Tool</a></p>
+
 
             </div>
             
