--- a/Sortujwszystkiezaznaczonelinie.html
+++ b/Sortujwszystkiezaznaczonelinie.html
@@ -190,7 +190,7 @@ a:link { color: #0076C5}</style>
 <p></p>
 <h1 class="rvps4"><span class="rvts0"><span class="rvts15">Sortuj wszystkie/zaznaczone linie</span></span></h1>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
-<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem15.png"></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/sortuj-linie.png"></p>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
 <ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
 <li value="1" class="rvps6"><span class="rvts6">Sortowanie według czasu początkowego.</span></li>
@@ -205,7 +205,7 @@ a:link { color: #0076C5}</style>
 <p class="rvps2"><span class="rvts6">Sortowanie zaznaczonych linijek sortuje je niezależnie od tego czy są zaznaczone wybiórczo czy w większej ilości jedna po drugiej.</span></p>
 <p class="rvps2"><span class="rvts6">W przypadku takich samych wartości jako drugi przy sortowaniu jest brany czas początkowy, a przy czasie początkowym czas końcowy.</span></p>
 <p></p>
-<p class="rvps5" style="clear: both;"><span class="rvts12">Created with the Personal Edition of HelpNDoc: </span><a class="rvts13" href="https://www.helpndoc.com/help-authoring-tool">Full-featured multi-format Help generator</a></p>
+
 
             </div>
             
