--- a/WlasciwosciASS.html
+++ b/WlasciwosciASS.html
@@ -189,11 +189,11 @@ a:link { color: #0076C5}</style>
                 
 <p></p>
 <h1 class="rvps4"><span class="rvts0"><span class="rvts15">Właściwości ASS</span></span></h1>
-<p class="rvps2"><span class="rvts6">Okno właściwości można załączyć z menu Napisy &gt; Właściwości ASS, bądź z paska narzędzi klikając w </span><img alt="" style="padding : 1px;" src="lib/Sinfo.jpg"><span class="rvts6">.</span></p>
+<p class="rvps2"><span class="rvts6">Okno właściwości można załączyć z menu Napisy &gt; Właściwości ASS, bądź z paska narzędzi klikając w </span><img alt="" style="padding : 1px;" src="lib/wczanie waciwoci ass.png"><span class="rvts6">.</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem29.png"></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/waciwoci-ass.png"></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts20">Właściwości pliku ASS nie wiele się różnią od tych z Aegisuba.</span></p>
+<p class="rvps2"><span class="rvts20">Właściwości pliku ASS niewiele się różnią od tych z Aegisuba.</span></p>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
 <ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
 <li value="1" class="rvps6"><span class="rvts6">Tytuł napisów, opcje od 1-6 są tylko czysto informacyjne, nie mają żadnego wpływu na same napisy.</span></li>
@@ -205,14 +205,14 @@ a:link { color: #0076C5}</style>
 <li value="7" class="rvps6"><span class="rvts6">Szerokość napisów, aby napisy wyświetlały się poprawnie zalecane jest, by była ona taka jak w wideo albo przynajmniej miała taki sam aspect ratio czyli szerokość / wysokość.</span></li>
 <li value="8" class="rvps6"><span class="rvts6">Wysokość napisów, aby napisy wyświetlały się poprawnie zalecane jest, by była ona taka jak w wideo albo przynajmniej miała taki sam aspect ratio czyli szerokość / wysokość.</span></li>
 <li value="9" class="rvps6"><span class="rvts6">Pobiera wartości szerokości i wysokości z wideo, gdy jest ono wczytane.</span></li>
-<li value="10" class="rvps6"><span class="rvts6">Zahaczenie tej opcji powoduje brak skalowania stylów i wszystkich pozycji, skali i wielkości w liniach, domyślnie ta opcja jest zahaczona bo skalowanie i tak wykonuje się rzadziej.</span></li>
+<li value="10" class="rvps6"><span class="rvts6">Macierz YCbCr. Pozwala wybrać macierz kolorów wideo. TV.709 dla wideo o rozdzielczości HD i większej i TV.601 dla niższych rozdzielczości, reszta opcji nie zmienia nic w VSfiltrze więc najlepiej ich nie używać. Możliwe że są używane w Libass, ale większości odbiorców zobaczy błędnie wyświetlane kolory, bo używa różnych wersji VSfiltra.</span></li>
 <li value="11" class="rvps6"><a name="qstyle"></a>
 <span class="rvts6">Sposób dzielenia linijek działa tak samo jak </span><span class="rvts23">{\q numer}</span><span class="rvts6"> wstawiane bezpośrednio w linijkę tyle że odnosi się do całych napisów.</span></li>
 </ol>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: square;"><ul style="text-indent: 0px; padding: 0; margin: 0 0 0 48px; list-style-position: outside; list-style-type: square;">
-<li style="margin-left: 0px" class="rvps18"><span class="rvts17">0</span><span class="rvts6"> i </span><span class="rvts17">3</span><span class="rvts6"> dzielą automatycznie starając się zachować zbliżoną wielkość linii tyle że w przypadku </span><span class="rvts17">0</span><span class="rvts6"> górna jest szersza a 3 dolna jest szersza, </span></li>
-<li style="margin-left: 0px" class="rvps18"><span class="rvts17">1</span><span class="rvts6"> dzieli dopiero gdy już tekst nie mieści się w linijce nie próbując wyrównywać linijek, pierwsza linia jest pełna a w drugiej może być tylko jeden wyraz. </span></li>
-<li style="margin-left: 0px" class="rvps18"><span class="rvts17">2</span><span class="rvts6"> dzielą tylko \N i \n.</span></li>
+<li style="margin-left: 0px" class="rvps19"><span class="rvts17">0</span><span class="rvts6"> i </span><span class="rvts17">3</span><span class="rvts6"> dzielą automatycznie starając się zachować zbliżoną wielkość linii tyle że w przypadku </span><span class="rvts17">0</span><span class="rvts6"> górna jest szersza a 3 dolna jest szersza, </span></li>
+<li style="margin-left: 0px" class="rvps19"><span class="rvts17">1</span><span class="rvts6"> dzieli dopiero gdy już tekst nie mieści się w linijce nie próbując wyrównywać linijek, pierwsza linia jest pełna a w drugiej może być tylko jeden wyraz. </span></li>
+<li style="margin-left: 0px" class="rvps19"><span class="rvts17">2</span><span class="rvts6"> dzielą tylko \N i \n.</span></li>
 </ul></ul>
 <ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
 <li value="12" class="rvps6"><span class="rvts6">Kolidowanie linijek ustawia kolejność rysowania rysowania linijek nachodzących się w czasie, w przypadku normalnego pierwsza linia zostaje na swoim miejscu a druga jest rysowana nad nią, a przy odwróconym wg definicji Aegisuba ma rysować pierwszą u góry a drugą na dole, ale tak się nie dzieje, może to tylko działa w niektórych wersjach Vsfiltra.</span></li>
@@ -221,9 +221,9 @@ a:link { color: #0076C5}</style>
 <li value="15" class="rvps6"><span class="rvts6">Anuluje zmiany i zamyka okno.</span></li>
 </ol>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps8"><span class="rvts6"><br/></span></p>
+<p class="rvps9"><span class="rvts6"><br/></span></p>
 <p></p>
-<p class="rvps5" style="clear: both;"><span class="rvts12">Created with the Personal Edition of HelpNDoc: </span><a class="rvts13" href="https://www.helpndoc.com/feature-tour">Easily create CHM Help documents</a></p>
+
 
             </div>
             
